v0.0.1/_sources/lcls-plc-qrix-motion_PLC_QRIX_MOT_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.101.1.1
      -
    * - Target IP address
      - 172.21.140.101
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_QRIX_MOT_pragmas:

Pragmas
-------

Total pragmas found: 236
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.8.2
        lcls-twincat-motion, SLAC, Unset, 2.2.0
        lcls-twincat-optics, SLAC, Unset, 0.2.1
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysDir, System, , 3.5.12.0
        SysFile, System, , 3.5.9.0
        Tc2_ControllerToolbox, Beckhoff Automation GmbH, , 3.4.3.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, Unset, 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4388640 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 1287503024 (8)
        Constants.bLittleEndian, BOOL, 1287502848 (8)
        Constants.bSimulationMode, BOOL, 1287502856 (8)
        Constants.CompilerVersion, VERSION, 1287502928 (64)
        Constants.CompilerVersionNumeric, DWORD, 1287503072 (32)
        Constants.nPackMode, UINT, 1287503008 (16)
        Constants.nRegisterSize, WORD, 1287502992 (16)
        Constants.RuntimeVersion, VERSION, 1287502864 (64)
        Constants.RuntimeVersionNumeric, DWORD, 1287503040 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096064 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 4096048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4387776 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4387904 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4387936 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4387968 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>242 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180448 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180352 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180320 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180384 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181088 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181120 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182112 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182208 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182144 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4179984 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180016 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4179968 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180000 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180240 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180176 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247872 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247904 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246608 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179680 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097136 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179712 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179728 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179744 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179696 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4179936 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4387952 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182336 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180312 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097128 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096328 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180304 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4389632 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260832 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260864 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267104 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267072 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267168 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183008 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 1265750976 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384336 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184600 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384344 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384352 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 1265750912 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248480 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386504 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386208 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386080 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246624 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4182992 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4247968 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4247952 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4247984 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248000 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248016 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248320 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248096 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248416 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248192 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248384 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248448 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248032 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248064 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248160 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248288 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248352 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248224 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248128 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182464 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182368 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182400 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248832 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248576 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4247936 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184608 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184592 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184560 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184576 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247840 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246272 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4389568 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4389600 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246144 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246112 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184544 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246336 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246464 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246488 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246480 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246600 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183104 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4389664 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246592 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182360 (8)
        Global_Variables.PI, LREAL, 4183040 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246528 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246560 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246368 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246400 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247808 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246208 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246240 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181152 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181184 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182344 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182352 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255168 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254320 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254704 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255680 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255200 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255552 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255616 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4182976 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4182960 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182800 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182816 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182832 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182784 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182848 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182928 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182880 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182896 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 1265743936 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4388960 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4388704 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4388672 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4388896 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4388928 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4388768 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4388800 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4388832 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4388736 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4388864 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4389216 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4389088 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4389056 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4388992 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4389152 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4389184 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4389024 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4389120 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4390112 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4389696 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4181952 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4181984 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182080 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255872 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_ControllerToolbox, ST_LibVersion, 1265754048 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178816 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386912 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 1265751040 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 1265743648 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387200 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387488 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179104 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179392 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184256 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4388224 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4390528 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183648 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634574912 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 1265743360 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4388160 (32)


GVL_Constants
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Constants.cPiezoMaxVoltage, LREAL, 1265751424 (64)
        GVL_Constants.cPiezoMinVoltage, LREAL, 1265751488 (64)
        GVL_Constants.cPiezoRange, REAL, 1265751328 (32)
        GVL_Constants.nGANTRY_TOLERANCE_NM_DEFAULT, LINT, 1265751360 (64)


GVL_EPS
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_EPS.bESTOP, BOOL, 1284914312 (8)
        GVL_EPS.bOpenSV1, BOOL, 1284914320 (8)
        GVL_EPS.bOpenSV2, BOOL, 1284914328 (8)
        GVL_EPS.bResetIClk, BOOL, 1284914304 (8)
        GVL_EPS.iServoTorqueLimitNegative, UINT, 1284914352 (16)
        GVL_EPS.iServoTorqueLimitPositive, UINT, 1284914336 (16)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4388512 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096040 (8)
        GVL_Logger.cLogHost, STRING(15), 4096128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 4096416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4392960 (16)
        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 635543024 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4386840 (8)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 635543008 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4390848 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 635542992 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390832 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 635542976 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390816 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 635542640 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 635545120 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4390880 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 635543040 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4390864 (8)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 635543016 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4390912 (2048)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 635543072 (2048)

.. raw:: html

   </details>
   <br />


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter, FB_Arbiter, 1284914368 (473472)
        GVL_PMPS.fbFastFaultOutput1, FB_HardwareFFOutput, 1285387840 (494912)
        GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 1285388104 (8)
        GVL_PMPS.fbFastFaultOutput2, FB_HardwareFFOutput, 1285882752 (494912)
        GVL_PMPS.fbFastFaultOutput2.q_xFastFaultOut, BOOL, 1285883016 (8)


GVL_Sensor
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Sensor.bFloating, BOOL, 1286377664 (8)
        GVL_Sensor.stFrameP, DUT_Sensor, 1286386272 (1408)
        GVL_Sensor.stFrameP.iRawCnts, INT, 1286387648 (16)
        GVL_Sensor.stFrameR, DUT_Sensor, 1286387680 (1408)
        GVL_Sensor.stFrameR.iRawCnts, INT, 1286389056 (16)
        GVL_Sensor.stGraniteP, DUT_Sensor, 1286383456 (1408)
        GVL_Sensor.stGraniteP.iRawCnts, INT, 1286384832 (16)
        GVL_Sensor.stGraniteR, DUT_Sensor, 1286384864 (1408)
        GVL_Sensor.stGraniteR.iRawCnts, INT, 1286386240 (16)
        GVL_Sensor.stHDF, DUT_SensorHGS, 1286382016 (1440)
        GVL_Sensor.stHDF.iRawCnts, DINT, 1286383392 (32)
        GVL_Sensor.stPS1, DUT_Sensor, 1286389088 (1408)
        GVL_Sensor.stPS1.iRawCnts, INT, 1286390464 (16)
        GVL_Sensor.stPS2, DUT_Sensor, 1286390496 (1408)
        GVL_Sensor.stPS2.iRawCnts, INT, 1286391872 (16)
        GVL_Sensor.stPS3, DUT_Sensor, 1286391904 (1408)
        GVL_Sensor.stPS3.iRawCnts, INT, 1286393280 (16)
        GVL_Sensor.stYDF1, DUT_SensorHGS, 1286377696 (1440)
        GVL_Sensor.stYDF1.iRawCnts, DINT, 1286379072 (32)
        GVL_Sensor.stYDF2, DUT_SensorHGS, 1286379136 (1440)
        GVL_Sensor.stYDF2.iRawCnts, DINT, 1286380512 (32)
        GVL_Sensor.stYDF3, DUT_SensorHGS, 1286380576 (1440)
        GVL_Sensor.stYDF3.iRawCnts, DINT, 1286381952 (32)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626254048 (8320864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 1257422496 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 1257406496 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4392976 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 1257372360 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626219968 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 1257372416 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626219936 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 1257372384 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4392984 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 1257372368 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626222016 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 1257374464 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4392992 (621826944)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 635545152 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626222048 (32000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 1257374496 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4390872 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 1257372352 (8)

.. raw:: html

   </details>
   <br />


GVL_TestStructs
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TestStructs.TestPitch_LimitSwitches, HOMS_PitchMechanism, 1265751552 (2496)


GVL_VAR
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VAR.bDoneAdjustingHeight, BOOL, 1286393328 (8)
        GVL_VAR.bDoneAdjustingPitch, BOOL, 1286393320 (8)
        GVL_VAR.bDoneAdjustingRoll, BOOL, 1286393312 (8)
        GVL_VAR.bDoneJackOff, BOOL, 1286377672 (8)
        GVL_VAR.bDoneLanding, BOOL, 1286377688 (8)
        GVL_VAR.bDoneLevitation, BOOL, 1286377680 (8)


lcls_twincat_optics
^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        lcls_twincat_optics.GVL_TestStructs.TestPitch_LimitSwitches.diEncCnt, LINT, 1265753984 (64)


Main
^^^^

.. raw:: html

   <details>
       <summary>484 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.M1, DUT_MotionStage, 1286393344 (25216)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286394432 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286393408 (1024)
        Main.M1.bBrakeRelease, BOOL, 1286402392 (8)
        Main.M1.bHardwareEnable, BOOL, 1286402400 (8)
        Main.M1.bHome, BOOL, 1286402384 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 1286402376 (8)
        Main.M1.bLimitForwardEnable, BOOL, 1286402368 (8)
        Main.M1.nRawEncoderINT, INT, 1286402512 (16)
        Main.M1.nRawEncoderUINT, UINT, 1286402496 (16)
        Main.M1.nRawEncoderULINT, ULINT, 1286402432 (64)
        Main.M10, DUT_MotionStage, 1286620288 (25216)
        Main.M10.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286621376 (2048)
        Main.M10.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286620352 (1024)
        Main.M10.bBrakeRelease, BOOL, 1286629336 (8)
        Main.M10.bHardwareEnable, BOOL, 1286629344 (8)
        Main.M10.bHome, BOOL, 1286629328 (8)
        Main.M10.bLimitBackwardEnable, BOOL, 1286629320 (8)
        Main.M10.bLimitForwardEnable, BOOL, 1286629312 (8)
        Main.M10.nRawEncoderINT, INT, 1286629456 (16)
        Main.M10.nRawEncoderUINT, UINT, 1286629440 (16)
        Main.M10.nRawEncoderULINT, ULINT, 1286629376 (64)
        Main.M11, DUT_MotionStage, 1286645504 (25216)
        Main.M11.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286646592 (2048)
        Main.M11.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286645568 (1024)
        Main.M11.bBrakeRelease, BOOL, 1286654552 (8)
        Main.M11.bHardwareEnable, BOOL, 1286654560 (8)
        Main.M11.bHome, BOOL, 1286654544 (8)
        Main.M11.bLimitBackwardEnable, BOOL, 1286654536 (8)
        Main.M11.bLimitForwardEnable, BOOL, 1286654528 (8)
        Main.M11.nRawEncoderINT, INT, 1286654672 (16)
        Main.M11.nRawEncoderUINT, UINT, 1286654656 (16)
        Main.M11.nRawEncoderULINT, ULINT, 1286654592 (64)
        Main.M12, DUT_MotionStage, 1286670720 (25216)
        Main.M12.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286671808 (2048)
        Main.M12.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286670784 (1024)
        Main.M12.bBrakeRelease, BOOL, 1286679768 (8)
        Main.M12.bHardwareEnable, BOOL, 1286679776 (8)
        Main.M12.bHome, BOOL, 1286679760 (8)
        Main.M12.bLimitBackwardEnable, BOOL, 1286679752 (8)
        Main.M12.bLimitForwardEnable, BOOL, 1286679744 (8)
        Main.M12.nRawEncoderINT, INT, 1286679888 (16)
        Main.M12.nRawEncoderUINT, UINT, 1286679872 (16)
        Main.M12.nRawEncoderULINT, ULINT, 1286679808 (64)
        Main.M13, DUT_MotionStage, 1286695936 (25216)
        Main.M13.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286697024 (2048)
        Main.M13.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286696000 (1024)
        Main.M13.bBrakeRelease, BOOL, 1286704984 (8)
        Main.M13.bHardwareEnable, BOOL, 1286704992 (8)
        Main.M13.bHome, BOOL, 1286704976 (8)
        Main.M13.bLimitBackwardEnable, BOOL, 1286704968 (8)
        Main.M13.bLimitForwardEnable, BOOL, 1286704960 (8)
        Main.M13.nRawEncoderINT, INT, 1286705104 (16)
        Main.M13.nRawEncoderUINT, UINT, 1286705088 (16)
        Main.M13.nRawEncoderULINT, ULINT, 1286705024 (64)
        Main.M14, DUT_MotionStage, 1286721152 (25216)
        Main.M14.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286722240 (2048)
        Main.M14.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286721216 (1024)
        Main.M14.bBrakeRelease, BOOL, 1286730200 (8)
        Main.M14.bHardwareEnable, BOOL, 1286730208 (8)
        Main.M14.bHome, BOOL, 1286730192 (8)
        Main.M14.bLimitBackwardEnable, BOOL, 1286730184 (8)
        Main.M14.bLimitForwardEnable, BOOL, 1286730176 (8)
        Main.M14.nRawEncoderINT, INT, 1286730320 (16)
        Main.M14.nRawEncoderUINT, UINT, 1286730304 (16)
        Main.M14.nRawEncoderULINT, ULINT, 1286730240 (64)
        Main.M15, DUT_MotionStage, 1286746368 (25216)
        Main.M15.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286747456 (2048)
        Main.M15.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286746432 (1024)
        Main.M15.bBrakeRelease, BOOL, 1286755416 (8)
        Main.M15.bHardwareEnable, BOOL, 1286755424 (8)
        Main.M15.bHome, BOOL, 1286755408 (8)
        Main.M15.bLimitBackwardEnable, BOOL, 1286755400 (8)
        Main.M15.bLimitForwardEnable, BOOL, 1286755392 (8)
        Main.M15.nRawEncoderINT, INT, 1286755536 (16)
        Main.M15.nRawEncoderUINT, UINT, 1286755520 (16)
        Main.M15.nRawEncoderULINT, ULINT, 1286755456 (64)
        Main.M16, DUT_MotionStage, 1286771584 (25216)
        Main.M16.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286772672 (2048)
        Main.M16.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286771648 (1024)
        Main.M16.bBrakeRelease, BOOL, 1286780632 (8)
        Main.M16.bHardwareEnable, BOOL, 1286780640 (8)
        Main.M16.bHome, BOOL, 1286780624 (8)
        Main.M16.bLimitBackwardEnable, BOOL, 1286780616 (8)
        Main.M16.bLimitForwardEnable, BOOL, 1286780608 (8)
        Main.M16.nRawEncoderINT, INT, 1286780752 (16)
        Main.M16.nRawEncoderUINT, UINT, 1286780736 (16)
        Main.M16.nRawEncoderULINT, ULINT, 1286780672 (64)
        Main.M17, DUT_MotionStage, 1286796800 (25216)
        Main.M17.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286797888 (2048)
        Main.M17.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286796864 (1024)
        Main.M17.bBrakeRelease, BOOL, 1286805848 (8)
        Main.M17.bHardwareEnable, BOOL, 1286805856 (8)
        Main.M17.bHome, BOOL, 1286805840 (8)
        Main.M17.bLimitBackwardEnable, BOOL, 1286805832 (8)
        Main.M17.bLimitForwardEnable, BOOL, 1286805824 (8)
        Main.M17.nRawEncoderINT, INT, 1286805968 (16)
        Main.M17.nRawEncoderUINT, UINT, 1286805952 (16)
        Main.M17.nRawEncoderULINT, ULINT, 1286805888 (64)
        Main.M18, DUT_MotionStage, 1286822016 (25216)
        Main.M18.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286823104 (2048)
        Main.M18.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286822080 (1024)
        Main.M18.bBrakeRelease, BOOL, 1286831064 (8)
        Main.M18.bHardwareEnable, BOOL, 1286831072 (8)
        Main.M18.bHome, BOOL, 1286831056 (8)
        Main.M18.bLimitBackwardEnable, BOOL, 1286831048 (8)
        Main.M18.bLimitForwardEnable, BOOL, 1286831040 (8)
        Main.M18.nRawEncoderINT, INT, 1286831184 (16)
        Main.M18.nRawEncoderUINT, UINT, 1286831168 (16)
        Main.M18.nRawEncoderULINT, ULINT, 1286831104 (64)
        Main.M19, DUT_MotionStage, 1286847232 (25216)
        Main.M19.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286848320 (2048)
        Main.M19.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286847296 (1024)
        Main.M19.bBrakeRelease, BOOL, 1286856280 (8)
        Main.M19.bHardwareEnable, BOOL, 1286856288 (8)
        Main.M19.bHome, BOOL, 1286856272 (8)
        Main.M19.bLimitBackwardEnable, BOOL, 1286856264 (8)
        Main.M19.bLimitForwardEnable, BOOL, 1286856256 (8)
        Main.M19.nRawEncoderINT, INT, 1286856400 (16)
        Main.M19.nRawEncoderUINT, UINT, 1286856384 (16)
        Main.M19.nRawEncoderULINT, ULINT, 1286856320 (64)
        Main.M2, DUT_MotionStage, 1286418560 (25216)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286419648 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286418624 (1024)
        Main.M2.bBrakeRelease, BOOL, 1286427608 (8)
        Main.M2.bHardwareEnable, BOOL, 1286427616 (8)
        Main.M2.bHome, BOOL, 1286427600 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 1286427592 (8)
        Main.M2.bLimitForwardEnable, BOOL, 1286427584 (8)
        Main.M2.nRawEncoderINT, INT, 1286427728 (16)
        Main.M2.nRawEncoderUINT, UINT, 1286427712 (16)
        Main.M2.nRawEncoderULINT, ULINT, 1286427648 (64)
        Main.M20, DUT_MotionStage, 1286872448 (25216)
        Main.M20.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286873536 (2048)
        Main.M20.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286872512 (1024)
        Main.M20.bBrakeRelease, BOOL, 1286881496 (8)
        Main.M20.bHardwareEnable, BOOL, 1286881504 (8)
        Main.M20.bHome, BOOL, 1286881488 (8)
        Main.M20.bLimitBackwardEnable, BOOL, 1286881480 (8)
        Main.M20.bLimitForwardEnable, BOOL, 1286881472 (8)
        Main.M20.nRawEncoderINT, INT, 1286881616 (16)
        Main.M20.nRawEncoderUINT, UINT, 1286881600 (16)
        Main.M20.nRawEncoderULINT, ULINT, 1286881536 (64)
        Main.M21, DUT_MotionStage, 1286897664 (25216)
        Main.M21.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286898752 (2048)
        Main.M21.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286897728 (1024)
        Main.M21.bBrakeRelease, BOOL, 1286906712 (8)
        Main.M21.bHardwareEnable, BOOL, 1286906720 (8)
        Main.M21.bHome, BOOL, 1286906704 (8)
        Main.M21.bLimitBackwardEnable, BOOL, 1286906696 (8)
        Main.M21.bLimitForwardEnable, BOOL, 1286906688 (8)
        Main.M21.nRawEncoderINT, INT, 1286906832 (16)
        Main.M21.nRawEncoderUINT, UINT, 1286906816 (16)
        Main.M21.nRawEncoderULINT, ULINT, 1286906752 (64)
        Main.M22, DUT_MotionStage, 1286922880 (25216)
        Main.M22.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286923968 (2048)
        Main.M22.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286922944 (1024)
        Main.M22.bBrakeRelease, BOOL, 1286931928 (8)
        Main.M22.bHardwareEnable, BOOL, 1286931936 (8)
        Main.M22.bHome, BOOL, 1286931920 (8)
        Main.M22.bLimitBackwardEnable, BOOL, 1286931912 (8)
        Main.M22.bLimitForwardEnable, BOOL, 1286931904 (8)
        Main.M22.nRawEncoderINT, INT, 1286932048 (16)
        Main.M22.nRawEncoderUINT, UINT, 1286932032 (16)
        Main.M22.nRawEncoderULINT, ULINT, 1286931968 (64)
        Main.M23, DUT_MotionStage, 1286948096 (25216)
        Main.M23.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286949184 (2048)
        Main.M23.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286948160 (1024)
        Main.M23.bBrakeRelease, BOOL, 1286957144 (8)
        Main.M23.bHardwareEnable, BOOL, 1286957152 (8)
        Main.M23.bHome, BOOL, 1286957136 (8)
        Main.M23.bLimitBackwardEnable, BOOL, 1286957128 (8)
        Main.M23.bLimitForwardEnable, BOOL, 1286957120 (8)
        Main.M23.nRawEncoderINT, INT, 1286957264 (16)
        Main.M23.nRawEncoderUINT, UINT, 1286957248 (16)
        Main.M23.nRawEncoderULINT, ULINT, 1286957184 (64)
        Main.M24, DUT_MotionStage, 1286973312 (25216)
        Main.M24.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286974400 (2048)
        Main.M24.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286973376 (1024)
        Main.M24.bBrakeRelease, BOOL, 1286982360 (8)
        Main.M24.bHardwareEnable, BOOL, 1286982368 (8)
        Main.M24.bHome, BOOL, 1286982352 (8)
        Main.M24.bLimitBackwardEnable, BOOL, 1286982344 (8)
        Main.M24.bLimitForwardEnable, BOOL, 1286982336 (8)
        Main.M24.nRawEncoderINT, INT, 1286982480 (16)
        Main.M24.nRawEncoderUINT, UINT, 1286982464 (16)
        Main.M24.nRawEncoderULINT, ULINT, 1286982400 (64)
        Main.M25, DUT_MotionStage, 1286998528 (25216)
        Main.M25.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286999616 (2048)
        Main.M25.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286998592 (1024)
        Main.M25.bBrakeRelease, BOOL, 1287007576 (8)
        Main.M25.bHardwareEnable, BOOL, 1287007584 (8)
        Main.M25.bHome, BOOL, 1287007568 (8)
        Main.M25.bLimitBackwardEnable, BOOL, 1287007560 (8)
        Main.M25.bLimitForwardEnable, BOOL, 1287007552 (8)
        Main.M25.nRawEncoderINT, INT, 1287007696 (16)
        Main.M25.nRawEncoderUINT, UINT, 1287007680 (16)
        Main.M25.nRawEncoderULINT, ULINT, 1287007616 (64)
        Main.M26, DUT_MotionStage, 1287023744 (25216)
        Main.M26.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287024832 (2048)
        Main.M26.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287023808 (1024)
        Main.M26.bBrakeRelease, BOOL, 1287032792 (8)
        Main.M26.bHardwareEnable, BOOL, 1287032800 (8)
        Main.M26.bHome, BOOL, 1287032784 (8)
        Main.M26.bLimitBackwardEnable, BOOL, 1287032776 (8)
        Main.M26.bLimitForwardEnable, BOOL, 1287032768 (8)
        Main.M26.nRawEncoderINT, INT, 1287032912 (16)
        Main.M26.nRawEncoderUINT, UINT, 1287032896 (16)
        Main.M26.nRawEncoderULINT, ULINT, 1287032832 (64)
        Main.M27, DUT_MotionStage, 1287048960 (25216)
        Main.M27.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287050048 (2048)
        Main.M27.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287049024 (1024)
        Main.M27.bBrakeRelease, BOOL, 1287058008 (8)
        Main.M27.bHardwareEnable, BOOL, 1287058016 (8)
        Main.M27.bHome, BOOL, 1287058000 (8)
        Main.M27.bLimitBackwardEnable, BOOL, 1287057992 (8)
        Main.M27.bLimitForwardEnable, BOOL, 1287057984 (8)
        Main.M27.nRawEncoderINT, INT, 1287058128 (16)
        Main.M27.nRawEncoderUINT, UINT, 1287058112 (16)
        Main.M27.nRawEncoderULINT, ULINT, 1287058048 (64)
        Main.M28, DUT_MotionStage, 1287074176 (25216)
        Main.M28.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287075264 (2048)
        Main.M28.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287074240 (1024)
        Main.M28.bBrakeRelease, BOOL, 1287083224 (8)
        Main.M28.bHardwareEnable, BOOL, 1287083232 (8)
        Main.M28.bHome, BOOL, 1287083216 (8)
        Main.M28.bLimitBackwardEnable, BOOL, 1287083208 (8)
        Main.M28.bLimitForwardEnable, BOOL, 1287083200 (8)
        Main.M28.nRawEncoderINT, INT, 1287083344 (16)
        Main.M28.nRawEncoderUINT, UINT, 1287083328 (16)
        Main.M28.nRawEncoderULINT, ULINT, 1287083264 (64)
        Main.M29, DUT_MotionStage, 1287099392 (25216)
        Main.M29.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287100480 (2048)
        Main.M29.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287099456 (1024)
        Main.M29.bBrakeRelease, BOOL, 1287108440 (8)
        Main.M29.bHardwareEnable, BOOL, 1287108448 (8)
        Main.M29.bHome, BOOL, 1287108432 (8)
        Main.M29.bLimitBackwardEnable, BOOL, 1287108424 (8)
        Main.M29.bLimitForwardEnable, BOOL, 1287108416 (8)
        Main.M29.nRawEncoderINT, INT, 1287108560 (16)
        Main.M29.nRawEncoderUINT, UINT, 1287108544 (16)
        Main.M29.nRawEncoderULINT, ULINT, 1287108480 (64)
        Main.M3, DUT_MotionStage, 1286443776 (25216)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286444864 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286443840 (1024)
        Main.M3.bBrakeRelease, BOOL, 1286452824 (8)
        Main.M3.bHardwareEnable, BOOL, 1286452832 (8)
        Main.M3.bHome, BOOL, 1286452816 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 1286452808 (8)
        Main.M3.bLimitForwardEnable, BOOL, 1286452800 (8)
        Main.M3.nRawEncoderINT, INT, 1286452944 (16)
        Main.M3.nRawEncoderUINT, UINT, 1286452928 (16)
        Main.M3.nRawEncoderULINT, ULINT, 1286452864 (64)
        Main.M30, DUT_MotionStage, 1287124608 (25216)
        Main.M30.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287125696 (2048)
        Main.M30.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287124672 (1024)
        Main.M30.bBrakeRelease, BOOL, 1287133656 (8)
        Main.M30.bHardwareEnable, BOOL, 1287133664 (8)
        Main.M30.bHome, BOOL, 1287133648 (8)
        Main.M30.bLimitBackwardEnable, BOOL, 1287133640 (8)
        Main.M30.bLimitForwardEnable, BOOL, 1287133632 (8)
        Main.M30.nRawEncoderINT, INT, 1287133776 (16)
        Main.M30.nRawEncoderUINT, UINT, 1287133760 (16)
        Main.M30.nRawEncoderULINT, ULINT, 1287133696 (64)
        Main.M31, DUT_MotionStage, 1287149824 (25216)
        Main.M31.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287150912 (2048)
        Main.M31.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287149888 (1024)
        Main.M31.bBrakeRelease, BOOL, 1287158872 (8)
        Main.M31.bHardwareEnable, BOOL, 1287158880 (8)
        Main.M31.bHome, BOOL, 1287158864 (8)
        Main.M31.bLimitBackwardEnable, BOOL, 1287158856 (8)
        Main.M31.bLimitForwardEnable, BOOL, 1287158848 (8)
        Main.M31.nRawEncoderINT, INT, 1287158992 (16)
        Main.M31.nRawEncoderUINT, UINT, 1287158976 (16)
        Main.M31.nRawEncoderULINT, ULINT, 1287158912 (64)
        Main.M32, DUT_MotionStage, 1287175040 (25216)
        Main.M32.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287176128 (2048)
        Main.M32.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287175104 (1024)
        Main.M32.bBrakeRelease, BOOL, 1287184088 (8)
        Main.M32.bHardwareEnable, BOOL, 1287184096 (8)
        Main.M32.bHome, BOOL, 1287184080 (8)
        Main.M32.bLimitBackwardEnable, BOOL, 1287184072 (8)
        Main.M32.bLimitForwardEnable, BOOL, 1287184064 (8)
        Main.M32.nRawEncoderINT, INT, 1287184208 (16)
        Main.M32.nRawEncoderUINT, UINT, 1287184192 (16)
        Main.M32.nRawEncoderULINT, ULINT, 1287184128 (64)
        Main.M33, DUT_MotionStage, 1287200256 (25216)
        Main.M33.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287201344 (2048)
        Main.M33.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287200320 (1024)
        Main.M33.bBrakeRelease, BOOL, 1287209304 (8)
        Main.M33.bHardwareEnable, BOOL, 1287209312 (8)
        Main.M33.bHome, BOOL, 1287209296 (8)
        Main.M33.bLimitBackwardEnable, BOOL, 1287209288 (8)
        Main.M33.bLimitForwardEnable, BOOL, 1287209280 (8)
        Main.M33.nRawEncoderINT, INT, 1287209424 (16)
        Main.M33.nRawEncoderUINT, UINT, 1287209408 (16)
        Main.M33.nRawEncoderULINT, ULINT, 1287209344 (64)
        Main.M34, DUT_MotionStage, 1287225472 (25216)
        Main.M34.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287226560 (2048)
        Main.M34.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287225536 (1024)
        Main.M34.bBrakeRelease, BOOL, 1287234520 (8)
        Main.M34.bHardwareEnable, BOOL, 1287234528 (8)
        Main.M34.bHome, BOOL, 1287234512 (8)
        Main.M34.bLimitBackwardEnable, BOOL, 1287234504 (8)
        Main.M34.bLimitForwardEnable, BOOL, 1287234496 (8)
        Main.M34.nRawEncoderINT, INT, 1287234640 (16)
        Main.M34.nRawEncoderUINT, UINT, 1287234624 (16)
        Main.M34.nRawEncoderULINT, ULINT, 1287234560 (64)
        Main.M35, DUT_MotionStage, 1287250688 (25216)
        Main.M35.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287251776 (2048)
        Main.M35.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287250752 (1024)
        Main.M35.bBrakeRelease, BOOL, 1287259736 (8)
        Main.M35.bHardwareEnable, BOOL, 1287259744 (8)
        Main.M35.bHome, BOOL, 1287259728 (8)
        Main.M35.bLimitBackwardEnable, BOOL, 1287259720 (8)
        Main.M35.bLimitForwardEnable, BOOL, 1287259712 (8)
        Main.M35.nRawEncoderINT, INT, 1287259856 (16)
        Main.M35.nRawEncoderUINT, UINT, 1287259840 (16)
        Main.M35.nRawEncoderULINT, ULINT, 1287259776 (64)
        Main.M36, DUT_MotionStage, 1287275904 (25216)
        Main.M36.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287276992 (2048)
        Main.M36.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287275968 (1024)
        Main.M36.bBrakeRelease, BOOL, 1287284952 (8)
        Main.M36.bHardwareEnable, BOOL, 1287284960 (8)
        Main.M36.bHome, BOOL, 1287284944 (8)
        Main.M36.bLimitBackwardEnable, BOOL, 1287284936 (8)
        Main.M36.bLimitForwardEnable, BOOL, 1287284928 (8)
        Main.M36.nRawEncoderINT, INT, 1287285072 (16)
        Main.M36.nRawEncoderUINT, UINT, 1287285056 (16)
        Main.M36.nRawEncoderULINT, ULINT, 1287284992 (64)
        Main.M37, DUT_MotionStage, 1287301120 (25216)
        Main.M37.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287302208 (2048)
        Main.M37.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287301184 (1024)
        Main.M37.bBrakeRelease, BOOL, 1287310168 (8)
        Main.M37.bHardwareEnable, BOOL, 1287310176 (8)
        Main.M37.bHome, BOOL, 1287310160 (8)
        Main.M37.bLimitBackwardEnable, BOOL, 1287310152 (8)
        Main.M37.bLimitForwardEnable, BOOL, 1287310144 (8)
        Main.M37.nRawEncoderINT, INT, 1287310288 (16)
        Main.M37.nRawEncoderUINT, UINT, 1287310272 (16)
        Main.M37.nRawEncoderULINT, ULINT, 1287310208 (64)
        Main.M38, DUT_MotionStage, 1287326336 (25216)
        Main.M38.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287327424 (2048)
        Main.M38.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287326400 (1024)
        Main.M38.bBrakeRelease, BOOL, 1287335384 (8)
        Main.M38.bHardwareEnable, BOOL, 1287335392 (8)
        Main.M38.bHome, BOOL, 1287335376 (8)
        Main.M38.bLimitBackwardEnable, BOOL, 1287335368 (8)
        Main.M38.bLimitForwardEnable, BOOL, 1287335360 (8)
        Main.M38.nRawEncoderINT, INT, 1287335504 (16)
        Main.M38.nRawEncoderUINT, UINT, 1287335488 (16)
        Main.M38.nRawEncoderULINT, ULINT, 1287335424 (64)
        Main.M39, DUT_MotionStage, 1287351552 (25216)
        Main.M39.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287352640 (2048)
        Main.M39.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287351616 (1024)
        Main.M39.bBrakeRelease, BOOL, 1287360600 (8)
        Main.M39.bHardwareEnable, BOOL, 1287360608 (8)
        Main.M39.bHome, BOOL, 1287360592 (8)
        Main.M39.bLimitBackwardEnable, BOOL, 1287360584 (8)
        Main.M39.bLimitForwardEnable, BOOL, 1287360576 (8)
        Main.M39.nRawEncoderINT, INT, 1287360720 (16)
        Main.M39.nRawEncoderUINT, UINT, 1287360704 (16)
        Main.M39.nRawEncoderULINT, ULINT, 1287360640 (64)
        Main.M4, DUT_MotionStage, 1286468992 (25216)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286470080 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286469056 (1024)
        Main.M4.bBrakeRelease, BOOL, 1286478040 (8)
        Main.M4.bHardwareEnable, BOOL, 1286478048 (8)
        Main.M4.bHome, BOOL, 1286478032 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 1286478024 (8)
        Main.M4.bLimitForwardEnable, BOOL, 1286478016 (8)
        Main.M4.nRawEncoderINT, INT, 1286478160 (16)
        Main.M4.nRawEncoderUINT, UINT, 1286478144 (16)
        Main.M4.nRawEncoderULINT, ULINT, 1286478080 (64)
        Main.M40, DUT_MotionStage, 1287376768 (25216)
        Main.M40.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287377856 (2048)
        Main.M40.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287376832 (1024)
        Main.M40.bBrakeRelease, BOOL, 1287385816 (8)
        Main.M40.bHardwareEnable, BOOL, 1287385824 (8)
        Main.M40.bHome, BOOL, 1287385808 (8)
        Main.M40.bLimitBackwardEnable, BOOL, 1287385800 (8)
        Main.M40.bLimitForwardEnable, BOOL, 1287385792 (8)
        Main.M40.nRawEncoderINT, INT, 1287385936 (16)
        Main.M40.nRawEncoderUINT, UINT, 1287385920 (16)
        Main.M40.nRawEncoderULINT, ULINT, 1287385856 (64)
        Main.M41, DUT_MotionStage, 1287401984 (25216)
        Main.M41.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287403072 (2048)
        Main.M41.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287402048 (1024)
        Main.M41.bBrakeRelease, BOOL, 1287411032 (8)
        Main.M41.bHardwareEnable, BOOL, 1287411040 (8)
        Main.M41.bHome, BOOL, 1287411024 (8)
        Main.M41.bLimitBackwardEnable, BOOL, 1287411016 (8)
        Main.M41.bLimitForwardEnable, BOOL, 1287411008 (8)
        Main.M41.nRawEncoderINT, INT, 1287411152 (16)
        Main.M41.nRawEncoderUINT, UINT, 1287411136 (16)
        Main.M41.nRawEncoderULINT, ULINT, 1287411072 (64)
        Main.M42, DUT_MotionStage, 1287427200 (25216)
        Main.M42.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287428288 (2048)
        Main.M42.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287427264 (1024)
        Main.M42.bBrakeRelease, BOOL, 1287436248 (8)
        Main.M42.bHardwareEnable, BOOL, 1287436256 (8)
        Main.M42.bHome, BOOL, 1287436240 (8)
        Main.M42.bLimitBackwardEnable, BOOL, 1287436232 (8)
        Main.M42.bLimitForwardEnable, BOOL, 1287436224 (8)
        Main.M42.nRawEncoderINT, INT, 1287436368 (16)
        Main.M42.nRawEncoderUINT, UINT, 1287436352 (16)
        Main.M42.nRawEncoderULINT, ULINT, 1287436288 (64)
        Main.M43, DUT_MotionStage, 1287452416 (25216)
        Main.M43.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287453504 (2048)
        Main.M43.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287452480 (1024)
        Main.M43.bBrakeRelease, BOOL, 1287461464 (8)
        Main.M43.bHardwareEnable, BOOL, 1287461472 (8)
        Main.M43.bHome, BOOL, 1287461456 (8)
        Main.M43.bLimitBackwardEnable, BOOL, 1287461448 (8)
        Main.M43.bLimitForwardEnable, BOOL, 1287461440 (8)
        Main.M43.nRawEncoderINT, INT, 1287461584 (16)
        Main.M43.nRawEncoderUINT, UINT, 1287461568 (16)
        Main.M43.nRawEncoderULINT, ULINT, 1287461504 (64)
        Main.M44, DUT_MotionStage, 1287477632 (25216)
        Main.M44.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287478720 (2048)
        Main.M44.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287477696 (1024)
        Main.M44.bBrakeRelease, BOOL, 1287486680 (8)
        Main.M44.bHardwareEnable, BOOL, 1287486688 (8)
        Main.M44.bHome, BOOL, 1287486672 (8)
        Main.M44.bLimitBackwardEnable, BOOL, 1287486664 (8)
        Main.M44.bLimitForwardEnable, BOOL, 1287486656 (8)
        Main.M44.nRawEncoderINT, INT, 1287486800 (16)
        Main.M44.nRawEncoderUINT, UINT, 1287486784 (16)
        Main.M44.nRawEncoderULINT, ULINT, 1287486720 (64)
        Main.M5, DUT_MotionStage, 1286494208 (25216)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286495296 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286494272 (1024)
        Main.M5.bBrakeRelease, BOOL, 1286503256 (8)
        Main.M5.bHardwareEnable, BOOL, 1286503264 (8)
        Main.M5.bHome, BOOL, 1286503248 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 1286503240 (8)
        Main.M5.bLimitForwardEnable, BOOL, 1286503232 (8)
        Main.M5.nRawEncoderINT, INT, 1286503376 (16)
        Main.M5.nRawEncoderUINT, UINT, 1286503360 (16)
        Main.M5.nRawEncoderULINT, ULINT, 1286503296 (64)
        Main.M6, DUT_MotionStage, 1286519424 (25216)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286520512 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286519488 (1024)
        Main.M6.bBrakeRelease, BOOL, 1286528472 (8)
        Main.M6.bHardwareEnable, BOOL, 1286528480 (8)
        Main.M6.bHome, BOOL, 1286528464 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 1286528456 (8)
        Main.M6.bLimitForwardEnable, BOOL, 1286528448 (8)
        Main.M6.nRawEncoderINT, INT, 1286528592 (16)
        Main.M6.nRawEncoderUINT, UINT, 1286528576 (16)
        Main.M6.nRawEncoderULINT, ULINT, 1286528512 (64)
        Main.M7, DUT_MotionStage, 1286544640 (25216)
        Main.M7.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286545728 (2048)
        Main.M7.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286544704 (1024)
        Main.M7.bBrakeRelease, BOOL, 1286553688 (8)
        Main.M7.bHardwareEnable, BOOL, 1286553696 (8)
        Main.M7.bHome, BOOL, 1286553680 (8)
        Main.M7.bLimitBackwardEnable, BOOL, 1286553672 (8)
        Main.M7.bLimitForwardEnable, BOOL, 1286553664 (8)
        Main.M7.nRawEncoderINT, INT, 1286553808 (16)
        Main.M7.nRawEncoderUINT, UINT, 1286553792 (16)
        Main.M7.nRawEncoderULINT, ULINT, 1286553728 (64)
        Main.M8, DUT_MotionStage, 1286569856 (25216)
        Main.M8.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286570944 (2048)
        Main.M8.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286569920 (1024)
        Main.M8.bBrakeRelease, BOOL, 1286578904 (8)
        Main.M8.bHardwareEnable, BOOL, 1286578912 (8)
        Main.M8.bHome, BOOL, 1286578896 (8)
        Main.M8.bLimitBackwardEnable, BOOL, 1286578888 (8)
        Main.M8.bLimitForwardEnable, BOOL, 1286578880 (8)
        Main.M8.nRawEncoderINT, INT, 1286579024 (16)
        Main.M8.nRawEncoderUINT, UINT, 1286579008 (16)
        Main.M8.nRawEncoderULINT, ULINT, 1286578944 (64)
        Main.M9, DUT_MotionStage, 1286595072 (25216)
        Main.M9.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1286596160 (2048)
        Main.M9.Axis.PlcToNc, PLCTONC_AXIS_REF, 1286595136 (1024)
        Main.M9.bBrakeRelease, BOOL, 1286604120 (8)
        Main.M9.bHardwareEnable, BOOL, 1286604128 (8)
        Main.M9.bHome, BOOL, 1286604112 (8)
        Main.M9.bLimitBackwardEnable, BOOL, 1286604104 (8)
        Main.M9.bLimitForwardEnable, BOOL, 1286604096 (8)
        Main.M9.nRawEncoderINT, INT, 1286604240 (16)
        Main.M9.nRawEncoderUINT, UINT, 1286604224 (16)
        Main.M9.nRawEncoderULINT, ULINT, 1286604160 (64)

.. raw:: html

   </details>
   <br />


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.fbPmpsFileReader, FB_JsonFileToJsonDoc, 634575232 (928128)
        MOTION_GVL.fbStandardPMPSDB, FB_Standard_PMPSDB, 635503360 (27744)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4388192 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 626222032 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 635535888 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 635537728 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 635535968 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 635539520 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 635535648 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 635535744 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 635534624 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 635541600 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 635540576 (1024)
        PMPS_GVL.g_cBoundaries, INT, 635539504 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 635539488 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 635535808 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 635535872 (16)
        PMPS_GVL.PERange, PE_Ranges, 634575200 (32)
        PMPS_GVL.reVHyst, REAL, 635540544 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 635535904 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 635532864 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 635531104 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 635535840 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 635535680 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 635542656 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 635542624 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 635542688 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 635542720 (256)


PRG_2_PMPS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 1265797440 (138368)
        PRG_2_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 1265798240 (1760)
        PRG_2_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 1265800000 (1760)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_state, BIT, 1265801761 (1)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 1265801760 (1)


PRG_2Theta
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2Theta.bInit, BOOL, 1272042040 (8)
        PRG_2Theta.bMoveOk, BOOL, 1277439648 (8)
        PRG_2Theta.fb2ThetaStepper, FB_MotionStage, 1277440448 (297920)
        PRG_2Theta.fb2ThetaStepper.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1277442944 (2048)
        PRG_2Theta.fb2ThetaStepper.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1277441920 (1024)
        PRG_2Theta.fbPower_AxisM2, MC_Power, 1277439680 (768)
        PRG_2Theta.fThresholdPS1, REAL, 1277738368 (32)
        PRG_2Theta.fThresholdPS2, REAL, 1277738400 (32)
        PRG_2Theta.fThresholdPS3, REAL, 1277738432 (32)


PRG_3_LOG
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_3_LOG.fbLogHandler, FB_LogHandler, 1265939520 (5788736)


PRG_DET_ARM
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_ARM.bExecuteCouple, BOOL, 1277439664 (8)
        PRG_DET_ARM.bExecuteDecouple, BOOL, 1277439672 (8)
        PRG_DET_ARM.bInit, BOOL, 1277439656 (8)
        PRG_DET_ARM.fbAutoCoupling, FB_GantryAutoCoupling, 1278632256 (9472)
        PRG_DET_ARM.fbAutoCoupling.gantry_diff_limit.PEnc.Count, ULINT, 1278632704 (64)
        PRG_DET_ARM.fbAutoCoupling.gantry_diff_limit.SEnc.Count, ULINT, 1278632832 (64)
        PRG_DET_ARM.fbMotionYF1, FB_MotionStage, 1277738496 (297920)
        PRG_DET_ARM.fbMotionYF1.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1277740992 (2048)
        PRG_DET_ARM.fbMotionYF1.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1277739968 (1024)
        PRG_DET_ARM.fbMotionYF2, FB_MotionStage, 1278036416 (297920)
        PRG_DET_ARM.fbMotionYF2.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278038912 (2048)
        PRG_DET_ARM.fbMotionYF2.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278037888 (1024)
        PRG_DET_ARM.fbMotionZF, FB_MotionStage, 1278334336 (297920)
        PRG_DET_ARM.fbMotionZF.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278336832 (2048)
        PRG_DET_ARM.fbMotionZF.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278335808 (1024)
        PRG_DET_ARM.stRenishawAbsEncMaster, ST_RenishawAbsEnc, 1278641728 (128)
        PRG_DET_ARM.stRenishawAbsEncMaster.Count, ULINT, 1278641728 (64)
        PRG_DET_ARM.stRenishawAbsEncSlave, ST_RenishawAbsEnc, 1278641856 (128)
        PRG_DET_ARM.stRenishawAbsEncSlave.Count, ULINT, 1278641856 (64)

.. raw:: html

   </details>
   <br />


PRG_DET_CHAMBER
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_CHAMBER.bInit, BOOL, 1277738464 (8)
        PRG_DET_CHAMBER.fbMotionRyDC, FB_MotionStage, 1278939904 (297920)
        PRG_DET_CHAMBER.fbMotionRyDC.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278942400 (2048)
        PRG_DET_CHAMBER.fbMotionRyDC.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278941376 (1024)
        PRG_DET_CHAMBER.fbMotionXDC, FB_MotionStage, 1278641984 (297920)
        PRG_DET_CHAMBER.fbMotionXDC.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278644480 (2048)
        PRG_DET_CHAMBER.fbMotionXDC.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278643456 (1024)
        PRG_DET_CHAMBER.fbMotionZDC, FB_MotionStage, 1279237824 (297920)
        PRG_DET_CHAMBER.fbMotionZDC.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1279240320 (2048)
        PRG_DET_CHAMBER.fbMotionZDC.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1279239296 (1024)


PRG_DET_FRAME
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>44 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_FRAME.bBusy, BOOL, 1280880272 (8)
        PRG_DET_FRAME.bDone_M15, BOOL, 1280880384 (8)
        PRG_DET_FRAME.bDone_M16, BOOL, 1280880392 (8)
        PRG_DET_FRAME.bDone_M17, BOOL, 1280880400 (8)
        PRG_DET_FRAME.bEnableAdjustingHeight, BOOL, 1280880376 (8)
        PRG_DET_FRAME.bEnableAdjustingPitch, BOOL, 1280880368 (8)
        PRG_DET_FRAME.bEnableAdjustingRoll, BOOL, 1280880360 (8)
        PRG_DET_FRAME.bEnableJackOff, BOOL, 1280880336 (8)
        PRG_DET_FRAME.bEnableLanding, BOOL, 1280880352 (8)
        PRG_DET_FRAME.bEnableLevitation, BOOL, 1280880344 (8)
        PRG_DET_FRAME.bEnableMotion, BOOL, 1280880288 (8)
        PRG_DET_FRAME.bEnableMotion_M15, BOOL, 1280880296 (8)
        PRG_DET_FRAME.bEnableMotion_M16, BOOL, 1280880304 (8)
        PRG_DET_FRAME.bEnableMotion_M17, BOOL, 1280880312 (8)
        PRG_DET_FRAME.bEnableMoveRelative, BOOL, 1280880328 (8)
        PRG_DET_FRAME.bEnableSetGaugeValue, BOOL, 1280880320 (8)
        PRG_DET_FRAME.bError, BOOL, 1280880264 (8)
        PRG_DET_FRAME.bInit, BOOL, 1280880256 (8)
        PRG_DET_FRAME.bResetError, BOOL, 1280880280 (8)
        PRG_DET_FRAME.fbMoveRelative_M15, MC_MoveRelative, 1280890048 (8768)
        PRG_DET_FRAME.fbMoveRelative_M16, MC_MoveRelative, 1280898816 (8768)
        PRG_DET_FRAME.fbMoveRelative_M17, MC_MoveRelative, 1280907584 (8768)
        PRG_DET_FRAME.fbPower_AxisM15, MC_Power, 1280881600 (768)
        PRG_DET_FRAME.fbPower_AxisM16, MC_Power, 1280882368 (768)
        PRG_DET_FRAME.fbPower_AxisM17, MC_Power, 1280883136 (768)
        PRG_DET_FRAME.fbSetPosition_M15, MC_SetPosition, 1280883904 (1984)
        PRG_DET_FRAME.fbSetPosition_M16, MC_SetPosition, 1280885888 (1984)
        PRG_DET_FRAME.fbSetPosition_M17, MC_SetPosition, 1280887872 (1984)
        PRG_DET_FRAME.fDistanceX, LREAL, 1280881472 (64)
        PRG_DET_FRAME.fDistanceZ, LREAL, 1280881536 (64)
        PRG_DET_FRAME.fTargetPos_M15, LREAL, 1280889856 (64)
        PRG_DET_FRAME.fTargetPos_M16, LREAL, 1280889920 (64)
        PRG_DET_FRAME.fTargetPos_M17, LREAL, 1280889984 (64)
        PRG_DET_FRAME.iStepAdjustingHeight, INT, 1280881392 (16)
        PRG_DET_FRAME.iStepAdjustingPitch, INT, 1280881376 (16)
        PRG_DET_FRAME.iStepAdjustingRoll, INT, 1280881328 (16)
        PRG_DET_FRAME.iStepJackOff, INT, 1280881312 (16)
        PRG_DET_FRAME.iStepMoveRelative, INT, 1280881360 (16)
        PRG_DET_FRAME.iStepSetGaugeValue, INT, 1280881344 (16)
        PRG_DET_FRAME.tonDelayTrig, TON, 1280881088 (224)
        PRG_DET_FRAME.tonSV1Close, TON, 1280880864 (224)
        PRG_DET_FRAME.tonSV2Open, TON, 1280880640 (224)
        PRG_DET_FRAME.tonWaitToStabilize, TON, 1280880416 (224)
        PRG_DET_FRAME.trigDone, F_TRIG, 1280881408 (64)

.. raw:: html

   </details>
   <br />


PRG_DET_SLIT
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_SLIT.bExecuteMotion, BOOL, 1277738472 (8)
        PRG_DET_SLIT.bInit, BOOL, 1277738488 (8)
        PRG_DET_SLIT.bMoveOk, BOOL, 1277738480 (8)
        PRG_DET_SLIT.fbSlits_Det, FB_Slits, 1279536256 (1344000)
        PRG_DET_SLIT.fbSlits_Det.AptArrayReq, ST_PMPS_Aperture_IO, 1280879360 (96)
        PRG_DET_SLIT.fbSlits_Det.AptArrayStatus, ST_PMPS_Aperture_IO, 1280879264 (96)
        PRG_DET_SLIT.fbSlits_Det.fbBottomBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1279837760 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbBottomBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1279836736 (1024)
        PRG_DET_SLIT.fbSlits_Det.fbLeftBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1280135680 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbLeftBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1280134656 (1024)
        PRG_DET_SLIT.fbSlits_Det.fbRightBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1280433600 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbRightBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1280432576 (1024)
        PRG_DET_SLIT.fbSlits_Det.fbTopBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1279539840 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbTopBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1279538816 (1024)

.. raw:: html

   </details>
   <br />


PRG_Diffractometer
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>51 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Diffractometer.bExecuteCouple, BOOL, 1265939488 (8)
        PRG_Diffractometer.bExecuteDecouple, BOOL, 1265939496 (8)
        PRG_Diffractometer.bInit, BOOL, 1265797432 (8)
        PRG_Diffractometer.couple, MC_GearIn, 1274445312 (6656)
        PRG_Diffractometer.decouple, MC_GearOut, 1274451968 (1792)
        PRG_Diffractometer.EPS_Diff_2Theta, FB_EPS, 1274432384 (64)
        PRG_Diffractometer.EPS_Diff_2ThetaY, FB_EPS, 1274433792 (64)
        PRG_Diffractometer.EPS_Diff_Chi, FB_EPS, 1274428160 (64)
        PRG_Diffractometer.EPS_Diff_Phi, FB_EPS, 1274429568 (64)
        PRG_Diffractometer.EPS_Diff_Theta, FB_EPS, 1274430976 (64)
        PRG_Diffractometer.EPS_Diff_Z, FB_EPS, 1274426752 (64)
        PRG_Diffractometer.fb2ThetaAutoCoupling, FB_GantryAutoCoupling, 1274435840 (9472)
        PRG_Diffractometer.fb2ThetaAutoCoupling.gantry_diff_limit.PEnc.Count, ULINT, 1274436288 (64)
        PRG_Diffractometer.fb2ThetaAutoCoupling.gantry_diff_limit.SEnc.Count, ULINT, 1274436416 (64)
        PRG_Diffractometer.fb_Diff_2Theta, FB_MotionStage, 1272339968 (297920)
        PRG_Diffractometer.fb_Diff_2Theta.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272342464 (2048)
        PRG_Diffractometer.fb_Diff_2Theta.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272341440 (1024)
        PRG_Diffractometer.fb_Diff_2Theta_Encoder, FB_MotionStage, 1274453888 (297920)
        PRG_Diffractometer.fb_Diff_2Theta_Encoder.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1274456384 (2048)
        PRG_Diffractometer.fb_Diff_2Theta_Encoder.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1274455360 (1024)
        PRG_Diffractometer.fb_Diff_2ThetaY, FB_MotionStage, 1272637888 (297920)
        PRG_Diffractometer.fb_Diff_2ThetaY.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272640384 (2048)
        PRG_Diffractometer.fb_Diff_2ThetaY.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272639360 (1024)
        PRG_Diffractometer.fb_Diff_Chi, FB_MotionStage, 1272935808 (297920)
        PRG_Diffractometer.fb_Diff_Chi.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272938304 (2048)
        PRG_Diffractometer.fb_Diff_Chi.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272937280 (1024)
        PRG_Diffractometer.fb_Diff_Phi, FB_MotionStage, 1273233728 (297920)
        PRG_Diffractometer.fb_Diff_Phi.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1273236224 (2048)
        PRG_Diffractometer.fb_Diff_Phi.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1273235200 (1024)
        PRG_Diffractometer.fb_Diff_Theta, FB_MotionStage, 1272042048 (297920)
        PRG_Diffractometer.fb_Diff_Theta.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272044544 (2048)
        PRG_Diffractometer.fb_Diff_Theta.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272043520 (1024)
        PRG_Diffractometer.fb_Diff_X, FB_MotionStage, 1273531648 (297920)
        PRG_Diffractometer.fb_Diff_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1273534144 (2048)
        PRG_Diffractometer.fb_Diff_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1273533120 (1024)
        PRG_Diffractometer.fb_Diff_Y, FB_MotionStage, 1273829568 (297920)
        PRG_Diffractometer.fb_Diff_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1273832064 (2048)
        PRG_Diffractometer.fb_Diff_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1273831040 (1024)
        PRG_Diffractometer.fb_Diff_Z, FB_MotionStage, 1274127488 (297920)
        PRG_Diffractometer.fb_Diff_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1274129984 (2048)
        PRG_Diffractometer.fb_Diff_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1274128960 (1024)
        PRG_Diffractometer.fbSetPosition, MC_SetPosition, 1274433856 (1984)
        PRG_Diffractometer.GantryDiff, REAL, 1271736736 (32)
        PRG_Diffractometer.rtemp, LREAL, 1274453824 (64)
        PRG_Diffractometer.stEPS_Diff_2Theta, DUT_EPS, 1274431040 (1344)
        PRG_Diffractometer.stEPS_Diff_2ThetaY, DUT_EPS, 1274432448 (1344)
        PRG_Diffractometer.stEPS_Diff_Chi, DUT_EPS, 1274426816 (1344)
        PRG_Diffractometer.stEPS_Diff_Phi, DUT_EPS, 1274428224 (1344)
        PRG_Diffractometer.stEPS_Diff_Theta, DUT_EPS, 1274429632 (1344)
        PRG_Diffractometer.stEPS_Diff_Z, DUT_EPS, 1274425408 (1344)
        PRG_Diffractometer.temp, ULINT, 1274453760 (64)

.. raw:: html

   </details>
   <br />


PRG_LAS
^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_LAS.bInit, BOOL, 1265939504 (8)
        PRG_LAS.fb_LAS_D_H, FB_MotionStage, 1275049728 (297920)
        PRG_LAS.fb_LAS_D_H.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1275052224 (2048)
        PRG_LAS.fb_LAS_D_H.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1275051200 (1024)
        PRG_LAS.fb_LAS_D_V, FB_MotionStage, 1275347648 (297920)
        PRG_LAS.fb_LAS_D_V.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1275350144 (2048)
        PRG_LAS.fb_LAS_D_V.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1275349120 (1024)
        PRG_LAS.fb_LAS_VIS, FB_MotionStage, 1274751808 (297920)
        PRG_LAS.fb_LAS_VIS.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1274754304 (2048)
        PRG_LAS.fb_LAS_VIS.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1274753280 (1024)
        PRG_LAS.fbLAS_D_H_EPS, FB_EPS, 1275648320 (64)
        PRG_LAS.fbLAS_VIS_EPS, FB_EPS, 1275646912 (64)
        PRG_LAS.stLAS_D_H, DUT_EPS, 1275646976 (1344)
        PRG_LAS.stLAS_VIS, DUT_EPS, 1275645568 (1344)

.. raw:: html

   </details>
   <br />


PRG_OPT
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT.bInit, BOOL, 1283294440 (8)
        PRG_OPT.fbMotionRxG, FB_MotionStage, 1284020544 (297920)
        PRG_OPT.fbMotionRxG.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1284023040 (2048)
        PRG_OPT.fbMotionRxG.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1284022016 (1024)
        PRG_OPT.fbMotionRzPM, FB_MotionStage, 1284616384 (297920)
        PRG_OPT.fbMotionRzPM.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1284618880 (2048)
        PRG_OPT.fbMotionRzPM.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1284617856 (1024)
        PRG_OPT.fbMotionXG, FB_MotionStage, 1284318464 (297920)
        PRG_OPT.fbMotionXG.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1284320960 (2048)
        PRG_OPT.fbMotionXG.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1284319936 (1024)


PRG_OPT_SLITS
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT_SLITS.bExecuteMotion, BOOL, 1280880408 (8)
        PRG_OPT_SLITS.bInit, BOOL, 1282260360 (8)
        PRG_OPT_SLITS.bMoveOk, BOOL, 1282260352 (8)
        PRG_OPT_SLITS.fbSlits_Opt, FB_Slits, 1280916352 (1344000)
        PRG_OPT_SLITS.fbSlits_Opt.AptArrayReq, ST_PMPS_Aperture_IO, 1282259456 (96)
        PRG_OPT_SLITS.fbSlits_Opt.AptArrayStatus, ST_PMPS_Aperture_IO, 1282259360 (96)
        PRG_OPT_SLITS.fbSlits_Opt.fbBottomBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281217856 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbBottomBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281216832 (1024)
        PRG_OPT_SLITS.fbSlits_Opt.fbLeftBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281515776 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbLeftBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281514752 (1024)
        PRG_OPT_SLITS.fbSlits_Opt.fbRightBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281813696 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbRightBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281812672 (1024)
        PRG_OPT_SLITS.fbSlits_Opt.fbTopBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1280919936 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbTopBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1280918912 (1024)

.. raw:: html

   </details>
   <br />


PRG_OPT_XPM
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT_XPM.bExecuteMotionXPM, BOOL, 1282260728 (8)
        PRG_OPT_XPM.bInit, BOOL, 1282260720 (8)
        PRG_OPT_XPM.bMoveOkXPM, BOOL, 1283294432 (8)
        PRG_OPT_XPM.fb2AxesXPM, FB_2AxesTrans, 1294744000 (726016)
        PRG_OPT_XPM.fb2AxesXPM.AptArrayReq, ST_PMPS_Aperture_IO, 1295469888 (96)
        PRG_OPT_XPM.fb2AxesXPM.AptArrayStatus, ST_PMPS_Aperture_IO, 1295469792 (96)
        PRG_OPT_XPM.fb2AxesXPM.fbFirstStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1294747520 (2048)
        PRG_OPT_XPM.fb2AxesXPM.fbFirstStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1294746496 (1024)
        PRG_OPT_XPM.fb2AxesXPM.fbSecondStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1295045440 (2048)
        PRG_OPT_XPM.fb2AxesXPM.fbSecondStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1295044416 (1024)
        PRG_OPT_XPM.rDistance, REAL, 1284020480 (32)

.. raw:: html

   </details>
   <br />


PRG_OPT_YG
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT_YG.bDebug, BOOL, 1282260368 (8)
        PRG_OPT_YG.bExecuteMotion, BOOL, 1282260376 (8)
        PRG_OPT_YG.bInit, BOOL, 1282260712 (8)
        PRG_OPT_YG.bMoveOk, BOOL, 1282260704 (8)
        PRG_OPT_YG.fbYGMotion, FB_3AxesJack, 1293710592 (1033408)
        PRG_OPT_YG.fbYGMotion.AptArrayReq, ST_PMPS_Aperture_IO, 1294743104 (96)
        PRG_OPT_YG.fbYGMotion.AptArrayStatus, ST_PMPS_Aperture_IO, 1294743008 (96)
        PRG_OPT_YG.fbYGMotion.fbJack1Stage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1293714368 (2048)
        PRG_OPT_YG.fbYGMotion.fbJack1Stage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1293713344 (1024)
        PRG_OPT_YG.fbYGMotion.fbJack2Stage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1294012288 (2048)
        PRG_OPT_YG.fbYGMotion.fbJack2Stage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1294011264 (1024)
        PRG_OPT_YG.fbYGMotion.fbJack3Stage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1294310208 (2048)
        PRG_OPT_YG.fbYGMotion.fbJack3Stage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1294309184 (1024)

.. raw:: html

   </details>
   <br />


PRG_SDS
^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SDS.bInit, BOOL, 1265939512 (8)
        PRG_SDS.fb_SDS_H, FB_MotionStage, 1277137984 (297920)
        PRG_SDS.fb_SDS_H.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1277140480 (2048)
        PRG_SDS.fb_SDS_H.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1277139456 (1024)
        PRG_SDS.fb_SDS_ROT_H, FB_MotionStage, 1276840064 (297920)
        PRG_SDS.fb_SDS_ROT_H.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1276842560 (2048)
        PRG_SDS.fb_SDS_ROT_H.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1276841536 (1024)
        PRG_SDS.fb_SDS_ROT_V, FB_MotionStage, 1275648384 (297920)
        PRG_SDS.fb_SDS_ROT_V.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1275650880 (2048)
        PRG_SDS.fb_SDS_ROT_V.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1275649856 (1024)
        PRG_SDS.fb_SDS_X, FB_MotionStage, 1275946304 (297920)
        PRG_SDS.fb_SDS_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1275948800 (2048)
        PRG_SDS.fb_SDS_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1275947776 (1024)
        PRG_SDS.fb_SDS_Y, FB_MotionStage, 1276244224 (297920)
        PRG_SDS.fb_SDS_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1276246720 (2048)
        PRG_SDS.fb_SDS_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1276245696 (1024)
        PRG_SDS.fb_SDS_Z, FB_MotionStage, 1276542144 (297920)
        PRG_SDS.fb_SDS_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1276544640 (2048)
        PRG_SDS.fb_SDS_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1276543616 (1024)

.. raw:: html

   </details>
   <br />


PRG_Sensor
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Sensor.bInit, BOOL, 1283294448 (8)
        PRG_Sensor.bResetSensorMode, BOOL, 1284020520 (8)
        PRG_Sensor.bSensorHeadNormalValueMode, BOOL, 1284020512 (8)
        PRG_Sensor.bSensorHeadValueMode, BOOL, 1283294456 (8)
        PRG_Sensor.uintTest, UINT, 1284020528 (16)


PRG_SpetrometerArm
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SpetrometerArm.bEnaIclk, BOOL, 1272042016 (8)
        PRG_SpetrometerArm.bEnaIclkErrAck, BOOL, 1272042024 (8)
        PRG_SpetrometerArm.bEnaIclkRestartESTOP, BOOL, 1272042032 (8)
        PRG_SpetrometerArm.fbPower_AxisM11, MC_Power, 1277435904 (768)
        PRG_SpetrometerArm.fbPower_AxisM12, MC_Power, 1277436672 (768)
        PRG_SpetrometerArm.fbPower_AxisM13, MC_Power, 1277437440 (768)
        PRG_SpetrometerArm.fbPower_AxisM14, MC_Power, 1277438208 (768)


PRG_SSL
^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SSL.bAlreadyCoupled, BOOL, 1257374488 (8)
        PRG_SSL.bExecuteCouple, BOOL, 1265797408 (8)
        PRG_SSL.bInit, BOOL, 1265797424 (8)
        PRG_SSL.bInitComplete, BOOL, 1265797416 (8)
        PRG_SSL.bLimitBackwardEnable, BOOL, 1257372376 (8)
        PRG_SSL.bLimitForwardEnable, BOOL, 1257374480 (8)
        PRG_SSL.couple, MC_GearIn, 1272034752 (6656)
        PRG_SSL.fb_SSL_Motor, FB_MotionStage, 1271736768 (297920)
        PRG_SSL.fb_SSL_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1271739264 (2048)
        PRG_SSL.fb_SSL_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1271738240 (1024)
        PRG_SSL.nCurrGantryDiff, LINT, 1272034688 (64)
        PRG_SSL.nGANTRY_TOLERANCE, LINT, 1272041536 (64)
        PRG_SSL.nSPCA_ENC_REF, ULINT, 1272041472 (64)
        PRG_SSL.nSSL_ENC_REF, ULINT, 1272041408 (64)

.. raw:: html

   </details>
   <br />


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 1287521280 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 1287520768 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 1287520896 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 1287521024 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 1287520640 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 1287521152 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 1287551616 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 1287503104 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 1287507264 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 1287504128 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 1287506176 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 1287507232 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 1287507200 (32)


