v0.2.0/_sources/lcls-plc-qrix-motion_PLC_QRIX_MOT_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.101.1.1
      -
    * - Target IP address
      - 172.21.140.101
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_QRIX_MOT_pragmas:

Pragmas
-------

Total pragmas found: 246
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.10.0
        lcls-twincat-motion, SLAC, Unset, 4.0.5
        lcls-twincat-optics, SLAC, Unset, 0.6.1
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysDir, System, , 3.5.12.0
        SysFile, System, , 3.5.9.0
        Tc2_ControllerToolbox, Beckhoff Automation GmbH, , 3.4.3.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, Unset, 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4388640 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 1290601136 (8)
        Constants.bLittleEndian, BOOL, 1290600960 (8)
        Constants.bSimulationMode, BOOL, 1290600968 (8)
        Constants.CompilerVersion, VERSION, 1290601040 (64)
        Constants.CompilerVersionNumeric, DWORD, 1290601184 (32)
        Constants.nPackMode, UINT, 1290601120 (16)
        Constants.nRegisterSize, WORD, 1290601104 (16)
        Constants.RuntimeVersion, VERSION, 1290600976 (64)
        Constants.RuntimeVersionNumeric, DWORD, 1290601152 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096064 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 4096048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4387776 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4387904 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4387936 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4387968 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>242 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180448 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180352 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180320 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180384 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181088 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181120 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182112 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182208 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182144 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4179984 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180016 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4179968 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180000 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180240 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180176 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247872 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247904 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246608 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179680 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097136 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179712 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179728 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179744 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179696 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4179936 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4387952 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182336 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180312 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097128 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096328 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180304 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4389632 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260832 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260864 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267104 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267072 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267168 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183008 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 1265751040 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384336 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184600 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384344 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384352 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 1265750976 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248480 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386504 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386208 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386080 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246624 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4182992 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4247968 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4247952 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4247984 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248000 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248016 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248320 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248096 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248416 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248192 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248384 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248448 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248032 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248064 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248160 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248288 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248352 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248224 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248128 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182464 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182368 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182400 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248832 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248576 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4247936 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184608 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184592 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184560 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184576 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247840 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246272 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4389568 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4389600 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246144 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246112 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184544 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246336 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246464 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246488 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246480 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246600 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183104 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4389664 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246592 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182360 (8)
        Global_Variables.PI, LREAL, 4183040 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246528 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246560 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246368 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246400 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247808 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246208 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246240 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181152 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181184 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182344 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182352 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255168 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254320 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254704 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255680 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255200 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255552 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255616 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4182976 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4182960 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182800 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182816 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182832 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182784 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182848 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182928 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182880 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182896 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 1265743968 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4388960 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4388704 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4388672 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4388896 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4388928 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4388768 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4388800 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4388832 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4388736 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4388864 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4389216 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4389088 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4389056 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4388992 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4389152 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4389184 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4389024 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4389120 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4390112 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4389696 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4181952 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4181984 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182080 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255872 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>16 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_lcls_twincat_optics, ST_LibVersion, 1265754112 (288)
        Global_Version.stLibVersion_Tc2_ControllerToolbox, ST_LibVersion, 1265754400 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178816 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386912 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 1265751104 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 1265743680 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387200 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387488 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179104 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179392 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184256 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4388224 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4390528 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183648 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634574912 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 1265743392 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4388160 (32)


GVL_Constants
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Constants.cPiezoMaxVoltage, LREAL, 1265751488 (64)
        GVL_Constants.cPiezoMinVoltage, LREAL, 1265751552 (64)
        GVL_Constants.cPiezoRange, REAL, 1265750944 (32)
        GVL_Constants.nGANTRY_TOLERANCE_NM_DEFAULT, LINT, 1265751424 (64)


GVL_EPS
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_EPS.bESTOP, BOOL, 1289121928 (8)
        GVL_EPS.bOpenSV1, BOOL, 1289121936 (8)
        GVL_EPS.bOpenSV2, BOOL, 1289121944 (8)
        GVL_EPS.bResetIClk, BOOL, 1289121920 (8)
        GVL_EPS.iServoTorqueLimitNegative, UINT, 1289121968 (16)
        GVL_EPS.iServoTorqueLimitPositive, UINT, 1289121952 (16)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4388512 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096040 (8)
        GVL_Logger.cLogHost, STRING(15), 4096128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 4096416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4392960 (16)
        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 635545152 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4386840 (8)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 635543056 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4390848 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 635543040 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390832 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 635543024 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390816 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 635543008 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 635545184 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4390880 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 635543072 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4390864 (8)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 635543064 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4390912 (2048)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 635543104 (2048)

.. raw:: html

   </details>
   <br />


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter, FB_Arbiter, 1289121984 (473472)
        GVL_PMPS.fbFastFaultOutput1, FB_HardwareFFOutput, 1289595456 (494912)
        GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 1289595720 (8)
        GVL_PMPS.fbFastFaultOutput2, FB_HardwareFFOutput, 1290090368 (494912)
        GVL_PMPS.fbFastFaultOutput2.q_xFastFaultOut, BOOL, 1290090632 (8)


GVL_Sensor
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Sensor.bFloating, BOOL, 1290585280 (8)
        GVL_Sensor.stFrameP, DUT_Sensor, 1290593888 (1408)
        GVL_Sensor.stFrameP.iRawCnts, INT, 1290595264 (16)
        GVL_Sensor.stFrameR, DUT_Sensor, 1290595296 (1408)
        GVL_Sensor.stFrameR.iRawCnts, INT, 1290596672 (16)
        GVL_Sensor.stGraniteP, DUT_Sensor, 1290591072 (1408)
        GVL_Sensor.stGraniteP.iRawCnts, INT, 1290592448 (16)
        GVL_Sensor.stGraniteR, DUT_Sensor, 1290592480 (1408)
        GVL_Sensor.stGraniteR.iRawCnts, INT, 1290593856 (16)
        GVL_Sensor.stHDF, DUT_SensorHGS, 1290589632 (1440)
        GVL_Sensor.stHDF.iRawCnts, DINT, 1290591008 (32)
        GVL_Sensor.stPS1, DUT_Sensor, 1290596704 (1408)
        GVL_Sensor.stPS1.iRawCnts, INT, 1290598080 (16)
        GVL_Sensor.stPS2, DUT_Sensor, 1290598112 (1408)
        GVL_Sensor.stPS2.iRawCnts, INT, 1290599488 (16)
        GVL_Sensor.stPS3, DUT_Sensor, 1290599520 (1408)
        GVL_Sensor.stPS3.iRawCnts, INT, 1290600896 (16)
        GVL_Sensor.stYDF1, DUT_SensorHGS, 1290585312 (1440)
        GVL_Sensor.stYDF1.iRawCnts, DINT, 1290586688 (32)
        GVL_Sensor.stYDF2, DUT_SensorHGS, 1290586752 (1440)
        GVL_Sensor.stYDF2.iRawCnts, DINT, 1290588128 (32)
        GVL_Sensor.stYDF3, DUT_SensorHGS, 1290588192 (1440)
        GVL_Sensor.stYDF3.iRawCnts, DINT, 1290589568 (32)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626254048 (8320864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 1257422528 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 1257406528 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4392976 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 635545176 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626219968 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 1257372448 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626219936 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 1257372416 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4392984 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 1257374496 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626222016 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 1257374512 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4392992 (621826944)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 635545216 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626222048 (32000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 1257374528 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4390872 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 635545168 (8)

.. raw:: html

   </details>
   <br />


GVL_TestStructs
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TestStructs.TestPitch_LimitSwitches, HOMS_PitchMechanism, 1265751616 (2496)


GVL_VAR
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VAR.bDoneAdjustingHeight, BOOL, 1290600944 (8)
        GVL_VAR.bDoneAdjustingPitch, BOOL, 1290600936 (8)
        GVL_VAR.bDoneAdjustingRoll, BOOL, 1290600928 (8)
        GVL_VAR.bDoneJackOff, BOOL, 1290585288 (8)
        GVL_VAR.bDoneLanding, BOOL, 1290585304 (8)
        GVL_VAR.bDoneLevitation, BOOL, 1290585296 (8)


lcls_twincat_optics
^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        lcls_twincat_optics.GVL_TestStructs.TestPitch_LimitSwitches.diEncCnt, LINT, 1265754048 (64)


Main
^^^^

.. raw:: html

   <details>
       <summary>539 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.M1, ST_MotionStage, 1287886336 (25216)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287887424 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287886400 (1024)
        Main.M1.bBrakeRelease, BOOL, 1287895384 (8)
        Main.M1.bHardwareEnable, BOOL, 1287895392 (8)
        Main.M1.bHome, BOOL, 1287895376 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 1287895368 (8)
        Main.M1.bLimitForwardEnable, BOOL, 1287895360 (8)
        Main.M1.nRawEncoderINT, INT, 1287895504 (16)
        Main.M1.nRawEncoderUINT, UINT, 1287895488 (16)
        Main.M1.nRawEncoderULINT, ULINT, 1287895424 (64)
        Main.M10, ST_MotionStage, 1288113280 (25216)
        Main.M10.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288114368 (2048)
        Main.M10.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288113344 (1024)
        Main.M10.bBrakeRelease, BOOL, 1288122328 (8)
        Main.M10.bHardwareEnable, BOOL, 1288122336 (8)
        Main.M10.bHome, BOOL, 1288122320 (8)
        Main.M10.bLimitBackwardEnable, BOOL, 1288122312 (8)
        Main.M10.bLimitForwardEnable, BOOL, 1288122304 (8)
        Main.M10.nRawEncoderINT, INT, 1288122448 (16)
        Main.M10.nRawEncoderUINT, UINT, 1288122432 (16)
        Main.M10.nRawEncoderULINT, ULINT, 1288122368 (64)
        Main.M11, ST_MotionStage, 1288138496 (25216)
        Main.M11.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288139584 (2048)
        Main.M11.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288138560 (1024)
        Main.M11.bBrakeRelease, BOOL, 1288147544 (8)
        Main.M11.bHardwareEnable, BOOL, 1288147552 (8)
        Main.M11.bHome, BOOL, 1288147536 (8)
        Main.M11.bLimitBackwardEnable, BOOL, 1288147528 (8)
        Main.M11.bLimitForwardEnable, BOOL, 1288147520 (8)
        Main.M11.nRawEncoderINT, INT, 1288147664 (16)
        Main.M11.nRawEncoderUINT, UINT, 1288147648 (16)
        Main.M11.nRawEncoderULINT, ULINT, 1288147584 (64)
        Main.M12, ST_MotionStage, 1288163712 (25216)
        Main.M12.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288164800 (2048)
        Main.M12.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288163776 (1024)
        Main.M12.bBrakeRelease, BOOL, 1288172760 (8)
        Main.M12.bHardwareEnable, BOOL, 1288172768 (8)
        Main.M12.bHome, BOOL, 1288172752 (8)
        Main.M12.bLimitBackwardEnable, BOOL, 1288172744 (8)
        Main.M12.bLimitForwardEnable, BOOL, 1288172736 (8)
        Main.M12.nRawEncoderINT, INT, 1288172880 (16)
        Main.M12.nRawEncoderUINT, UINT, 1288172864 (16)
        Main.M12.nRawEncoderULINT, ULINT, 1288172800 (64)
        Main.M13, ST_MotionStage, 1288188928 (25216)
        Main.M13.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288190016 (2048)
        Main.M13.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288188992 (1024)
        Main.M13.bBrakeRelease, BOOL, 1288197976 (8)
        Main.M13.bHardwareEnable, BOOL, 1288197984 (8)
        Main.M13.bHome, BOOL, 1288197968 (8)
        Main.M13.bLimitBackwardEnable, BOOL, 1288197960 (8)
        Main.M13.bLimitForwardEnable, BOOL, 1288197952 (8)
        Main.M13.nRawEncoderINT, INT, 1288198096 (16)
        Main.M13.nRawEncoderUINT, UINT, 1288198080 (16)
        Main.M13.nRawEncoderULINT, ULINT, 1288198016 (64)
        Main.M14, ST_MotionStage, 1288214144 (25216)
        Main.M14.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288215232 (2048)
        Main.M14.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288214208 (1024)
        Main.M14.bBrakeRelease, BOOL, 1288223192 (8)
        Main.M14.bHardwareEnable, BOOL, 1288223200 (8)
        Main.M14.bHome, BOOL, 1288223184 (8)
        Main.M14.bLimitBackwardEnable, BOOL, 1288223176 (8)
        Main.M14.bLimitForwardEnable, BOOL, 1288223168 (8)
        Main.M14.nRawEncoderINT, INT, 1288223312 (16)
        Main.M14.nRawEncoderUINT, UINT, 1288223296 (16)
        Main.M14.nRawEncoderULINT, ULINT, 1288223232 (64)
        Main.M15, ST_MotionStage, 1288239360 (25216)
        Main.M15.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288240448 (2048)
        Main.M15.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288239424 (1024)
        Main.M15.bBrakeRelease, BOOL, 1288248408 (8)
        Main.M15.bHardwareEnable, BOOL, 1288248416 (8)
        Main.M15.bHome, BOOL, 1288248400 (8)
        Main.M15.bLimitBackwardEnable, BOOL, 1288248392 (8)
        Main.M15.bLimitForwardEnable, BOOL, 1288248384 (8)
        Main.M15.nRawEncoderINT, INT, 1288248528 (16)
        Main.M15.nRawEncoderUINT, UINT, 1288248512 (16)
        Main.M15.nRawEncoderULINT, ULINT, 1288248448 (64)
        Main.M16, ST_MotionStage, 1288264576 (25216)
        Main.M16.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288265664 (2048)
        Main.M16.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288264640 (1024)
        Main.M16.bBrakeRelease, BOOL, 1288273624 (8)
        Main.M16.bHardwareEnable, BOOL, 1288273632 (8)
        Main.M16.bHome, BOOL, 1288273616 (8)
        Main.M16.bLimitBackwardEnable, BOOL, 1288273608 (8)
        Main.M16.bLimitForwardEnable, BOOL, 1288273600 (8)
        Main.M16.nRawEncoderINT, INT, 1288273744 (16)
        Main.M16.nRawEncoderUINT, UINT, 1288273728 (16)
        Main.M16.nRawEncoderULINT, ULINT, 1288273664 (64)
        Main.M17, ST_MotionStage, 1288289792 (25216)
        Main.M17.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288290880 (2048)
        Main.M17.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288289856 (1024)
        Main.M17.bBrakeRelease, BOOL, 1288298840 (8)
        Main.M17.bHardwareEnable, BOOL, 1288298848 (8)
        Main.M17.bHome, BOOL, 1288298832 (8)
        Main.M17.bLimitBackwardEnable, BOOL, 1288298824 (8)
        Main.M17.bLimitForwardEnable, BOOL, 1288298816 (8)
        Main.M17.nRawEncoderINT, INT, 1288298960 (16)
        Main.M17.nRawEncoderUINT, UINT, 1288298944 (16)
        Main.M17.nRawEncoderULINT, ULINT, 1288298880 (64)
        Main.M18, ST_MotionStage, 1288315008 (25216)
        Main.M18.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288316096 (2048)
        Main.M18.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288315072 (1024)
        Main.M18.bBrakeRelease, BOOL, 1288324056 (8)
        Main.M18.bHardwareEnable, BOOL, 1288324064 (8)
        Main.M18.bHome, BOOL, 1288324048 (8)
        Main.M18.bLimitBackwardEnable, BOOL, 1288324040 (8)
        Main.M18.bLimitForwardEnable, BOOL, 1288324032 (8)
        Main.M18.nRawEncoderINT, INT, 1288324176 (16)
        Main.M18.nRawEncoderUINT, UINT, 1288324160 (16)
        Main.M18.nRawEncoderULINT, ULINT, 1288324096 (64)
        Main.M19, ST_MotionStage, 1288340224 (25216)
        Main.M19.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288341312 (2048)
        Main.M19.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288340288 (1024)
        Main.M19.bBrakeRelease, BOOL, 1288349272 (8)
        Main.M19.bHardwareEnable, BOOL, 1288349280 (8)
        Main.M19.bHome, BOOL, 1288349264 (8)
        Main.M19.bLimitBackwardEnable, BOOL, 1288349256 (8)
        Main.M19.bLimitForwardEnable, BOOL, 1288349248 (8)
        Main.M19.nRawEncoderINT, INT, 1288349392 (16)
        Main.M19.nRawEncoderUINT, UINT, 1288349376 (16)
        Main.M19.nRawEncoderULINT, ULINT, 1288349312 (64)
        Main.M2, ST_MotionStage, 1287911552 (25216)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287912640 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287911616 (1024)
        Main.M2.bBrakeRelease, BOOL, 1287920600 (8)
        Main.M2.bHardwareEnable, BOOL, 1287920608 (8)
        Main.M2.bHome, BOOL, 1287920592 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 1287920584 (8)
        Main.M2.bLimitForwardEnable, BOOL, 1287920576 (8)
        Main.M2.nRawEncoderINT, INT, 1287920720 (16)
        Main.M2.nRawEncoderUINT, UINT, 1287920704 (16)
        Main.M2.nRawEncoderULINT, ULINT, 1287920640 (64)
        Main.M20, ST_MotionStage, 1288365440 (25216)
        Main.M20.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288366528 (2048)
        Main.M20.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288365504 (1024)
        Main.M20.bBrakeRelease, BOOL, 1288374488 (8)
        Main.M20.bHardwareEnable, BOOL, 1288374496 (8)
        Main.M20.bHome, BOOL, 1288374480 (8)
        Main.M20.bLimitBackwardEnable, BOOL, 1288374472 (8)
        Main.M20.bLimitForwardEnable, BOOL, 1288374464 (8)
        Main.M20.nRawEncoderINT, INT, 1288374608 (16)
        Main.M20.nRawEncoderUINT, UINT, 1288374592 (16)
        Main.M20.nRawEncoderULINT, ULINT, 1288374528 (64)
        Main.M21, ST_MotionStage, 1288390656 (25216)
        Main.M21.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288391744 (2048)
        Main.M21.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288390720 (1024)
        Main.M21.bBrakeRelease, BOOL, 1288399704 (8)
        Main.M21.bHardwareEnable, BOOL, 1288399712 (8)
        Main.M21.bHome, BOOL, 1288399696 (8)
        Main.M21.bLimitBackwardEnable, BOOL, 1288399688 (8)
        Main.M21.bLimitForwardEnable, BOOL, 1288399680 (8)
        Main.M21.nRawEncoderINT, INT, 1288399824 (16)
        Main.M21.nRawEncoderUINT, UINT, 1288399808 (16)
        Main.M21.nRawEncoderULINT, ULINT, 1288399744 (64)
        Main.M22, ST_MotionStage, 1288415872 (25216)
        Main.M22.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288416960 (2048)
        Main.M22.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288415936 (1024)
        Main.M22.bBrakeRelease, BOOL, 1288424920 (8)
        Main.M22.bHardwareEnable, BOOL, 1288424928 (8)
        Main.M22.bHome, BOOL, 1288424912 (8)
        Main.M22.bLimitBackwardEnable, BOOL, 1288424904 (8)
        Main.M22.bLimitForwardEnable, BOOL, 1288424896 (8)
        Main.M22.nRawEncoderINT, INT, 1288425040 (16)
        Main.M22.nRawEncoderUINT, UINT, 1288425024 (16)
        Main.M22.nRawEncoderULINT, ULINT, 1288424960 (64)
        Main.M23, ST_MotionStage, 1288441088 (25216)
        Main.M23.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288442176 (2048)
        Main.M23.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288441152 (1024)
        Main.M23.bBrakeRelease, BOOL, 1288450136 (8)
        Main.M23.bHardwareEnable, BOOL, 1288450144 (8)
        Main.M23.bHome, BOOL, 1288450128 (8)
        Main.M23.bLimitBackwardEnable, BOOL, 1288450120 (8)
        Main.M23.bLimitForwardEnable, BOOL, 1288450112 (8)
        Main.M23.nRawEncoderINT, INT, 1288450256 (16)
        Main.M23.nRawEncoderUINT, UINT, 1288450240 (16)
        Main.M23.nRawEncoderULINT, ULINT, 1288450176 (64)
        Main.M24, ST_MotionStage, 1288466304 (25216)
        Main.M24.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288467392 (2048)
        Main.M24.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288466368 (1024)
        Main.M24.bBrakeRelease, BOOL, 1288475352 (8)
        Main.M24.bHardwareEnable, BOOL, 1288475360 (8)
        Main.M24.bHome, BOOL, 1288475344 (8)
        Main.M24.bLimitBackwardEnable, BOOL, 1288475336 (8)
        Main.M24.bLimitForwardEnable, BOOL, 1288475328 (8)
        Main.M24.nRawEncoderINT, INT, 1288475472 (16)
        Main.M24.nRawEncoderUINT, UINT, 1288475456 (16)
        Main.M24.nRawEncoderULINT, ULINT, 1288475392 (64)
        Main.M25, ST_MotionStage, 1288491520 (25216)
        Main.M25.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288492608 (2048)
        Main.M25.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288491584 (1024)
        Main.M25.bBrakeRelease, BOOL, 1288500568 (8)
        Main.M25.bHardwareEnable, BOOL, 1288500576 (8)
        Main.M25.bHome, BOOL, 1288500560 (8)
        Main.M25.bLimitBackwardEnable, BOOL, 1288500552 (8)
        Main.M25.bLimitForwardEnable, BOOL, 1288500544 (8)
        Main.M25.nRawEncoderINT, INT, 1288500688 (16)
        Main.M25.nRawEncoderUINT, UINT, 1288500672 (16)
        Main.M25.nRawEncoderULINT, ULINT, 1288500608 (64)
        Main.M26, ST_MotionStage, 1288516736 (25216)
        Main.M26.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288517824 (2048)
        Main.M26.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288516800 (1024)
        Main.M26.bBrakeRelease, BOOL, 1288525784 (8)
        Main.M26.bHardwareEnable, BOOL, 1288525792 (8)
        Main.M26.bHome, BOOL, 1288525776 (8)
        Main.M26.bLimitBackwardEnable, BOOL, 1288525768 (8)
        Main.M26.bLimitForwardEnable, BOOL, 1288525760 (8)
        Main.M26.nRawEncoderINT, INT, 1288525904 (16)
        Main.M26.nRawEncoderUINT, UINT, 1288525888 (16)
        Main.M26.nRawEncoderULINT, ULINT, 1288525824 (64)
        Main.M27, ST_MotionStage, 1288541952 (25216)
        Main.M27.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288543040 (2048)
        Main.M27.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288542016 (1024)
        Main.M27.bBrakeRelease, BOOL, 1288551000 (8)
        Main.M27.bHardwareEnable, BOOL, 1288551008 (8)
        Main.M27.bHome, BOOL, 1288550992 (8)
        Main.M27.bLimitBackwardEnable, BOOL, 1288550984 (8)
        Main.M27.bLimitForwardEnable, BOOL, 1288550976 (8)
        Main.M27.nRawEncoderINT, INT, 1288551120 (16)
        Main.M27.nRawEncoderUINT, UINT, 1288551104 (16)
        Main.M27.nRawEncoderULINT, ULINT, 1288551040 (64)
        Main.M28, ST_MotionStage, 1288567168 (25216)
        Main.M28.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288568256 (2048)
        Main.M28.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288567232 (1024)
        Main.M28.bBrakeRelease, BOOL, 1288576216 (8)
        Main.M28.bHardwareEnable, BOOL, 1288576224 (8)
        Main.M28.bHome, BOOL, 1288576208 (8)
        Main.M28.bLimitBackwardEnable, BOOL, 1288576200 (8)
        Main.M28.bLimitForwardEnable, BOOL, 1288576192 (8)
        Main.M28.nRawEncoderINT, INT, 1288576336 (16)
        Main.M28.nRawEncoderUINT, UINT, 1288576320 (16)
        Main.M28.nRawEncoderULINT, ULINT, 1288576256 (64)
        Main.M29, ST_MotionStage, 1288592384 (25216)
        Main.M29.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288593472 (2048)
        Main.M29.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288592448 (1024)
        Main.M29.bBrakeRelease, BOOL, 1288601432 (8)
        Main.M29.bHardwareEnable, BOOL, 1288601440 (8)
        Main.M29.bHome, BOOL, 1288601424 (8)
        Main.M29.bLimitBackwardEnable, BOOL, 1288601416 (8)
        Main.M29.bLimitForwardEnable, BOOL, 1288601408 (8)
        Main.M29.nRawEncoderINT, INT, 1288601552 (16)
        Main.M29.nRawEncoderUINT, UINT, 1288601536 (16)
        Main.M29.nRawEncoderULINT, ULINT, 1288601472 (64)
        Main.M3, ST_MotionStage, 1287936768 (25216)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287937856 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287936832 (1024)
        Main.M3.bBrakeRelease, BOOL, 1287945816 (8)
        Main.M3.bHardwareEnable, BOOL, 1287945824 (8)
        Main.M3.bHome, BOOL, 1287945808 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 1287945800 (8)
        Main.M3.bLimitForwardEnable, BOOL, 1287945792 (8)
        Main.M3.nRawEncoderINT, INT, 1287945936 (16)
        Main.M3.nRawEncoderUINT, UINT, 1287945920 (16)
        Main.M3.nRawEncoderULINT, ULINT, 1287945856 (64)
        Main.M30, ST_MotionStage, 1288617600 (25216)
        Main.M30.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288618688 (2048)
        Main.M30.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288617664 (1024)
        Main.M30.bBrakeRelease, BOOL, 1288626648 (8)
        Main.M30.bHardwareEnable, BOOL, 1288626656 (8)
        Main.M30.bHome, BOOL, 1288626640 (8)
        Main.M30.bLimitBackwardEnable, BOOL, 1288626632 (8)
        Main.M30.bLimitForwardEnable, BOOL, 1288626624 (8)
        Main.M30.nRawEncoderINT, INT, 1288626768 (16)
        Main.M30.nRawEncoderUINT, UINT, 1288626752 (16)
        Main.M30.nRawEncoderULINT, ULINT, 1288626688 (64)
        Main.M31, ST_MotionStage, 1288642816 (25216)
        Main.M31.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288643904 (2048)
        Main.M31.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288642880 (1024)
        Main.M31.bBrakeRelease, BOOL, 1288651864 (8)
        Main.M31.bHardwareEnable, BOOL, 1288651872 (8)
        Main.M31.bHome, BOOL, 1288651856 (8)
        Main.M31.bLimitBackwardEnable, BOOL, 1288651848 (8)
        Main.M31.bLimitForwardEnable, BOOL, 1288651840 (8)
        Main.M31.nRawEncoderINT, INT, 1288651984 (16)
        Main.M31.nRawEncoderUINT, UINT, 1288651968 (16)
        Main.M31.nRawEncoderULINT, ULINT, 1288651904 (64)
        Main.M32, ST_MotionStage, 1288668032 (25216)
        Main.M32.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288669120 (2048)
        Main.M32.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288668096 (1024)
        Main.M32.bBrakeRelease, BOOL, 1288677080 (8)
        Main.M32.bHardwareEnable, BOOL, 1288677088 (8)
        Main.M32.bHome, BOOL, 1288677072 (8)
        Main.M32.bLimitBackwardEnable, BOOL, 1288677064 (8)
        Main.M32.bLimitForwardEnable, BOOL, 1288677056 (8)
        Main.M32.nRawEncoderINT, INT, 1288677200 (16)
        Main.M32.nRawEncoderUINT, UINT, 1288677184 (16)
        Main.M32.nRawEncoderULINT, ULINT, 1288677120 (64)
        Main.M33, ST_MotionStage, 1288693248 (25216)
        Main.M33.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288694336 (2048)
        Main.M33.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288693312 (1024)
        Main.M33.bBrakeRelease, BOOL, 1288702296 (8)
        Main.M33.bHardwareEnable, BOOL, 1288702304 (8)
        Main.M33.bHome, BOOL, 1288702288 (8)
        Main.M33.bLimitBackwardEnable, BOOL, 1288702280 (8)
        Main.M33.bLimitForwardEnable, BOOL, 1288702272 (8)
        Main.M33.nRawEncoderINT, INT, 1288702416 (16)
        Main.M33.nRawEncoderUINT, UINT, 1288702400 (16)
        Main.M33.nRawEncoderULINT, ULINT, 1288702336 (64)
        Main.M34, ST_MotionStage, 1288718464 (25216)
        Main.M34.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288719552 (2048)
        Main.M34.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288718528 (1024)
        Main.M34.bBrakeRelease, BOOL, 1288727512 (8)
        Main.M34.bHardwareEnable, BOOL, 1288727520 (8)
        Main.M34.bHome, BOOL, 1288727504 (8)
        Main.M34.bLimitBackwardEnable, BOOL, 1288727496 (8)
        Main.M34.bLimitForwardEnable, BOOL, 1288727488 (8)
        Main.M34.nRawEncoderINT, INT, 1288727632 (16)
        Main.M34.nRawEncoderUINT, UINT, 1288727616 (16)
        Main.M34.nRawEncoderULINT, ULINT, 1288727552 (64)
        Main.M35, ST_MotionStage, 1288743680 (25216)
        Main.M35.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288744768 (2048)
        Main.M35.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288743744 (1024)
        Main.M35.bBrakeRelease, BOOL, 1288752728 (8)
        Main.M35.bHardwareEnable, BOOL, 1288752736 (8)
        Main.M35.bHome, BOOL, 1288752720 (8)
        Main.M35.bLimitBackwardEnable, BOOL, 1288752712 (8)
        Main.M35.bLimitForwardEnable, BOOL, 1288752704 (8)
        Main.M35.nRawEncoderINT, INT, 1288752848 (16)
        Main.M35.nRawEncoderUINT, UINT, 1288752832 (16)
        Main.M35.nRawEncoderULINT, ULINT, 1288752768 (64)
        Main.M36, ST_MotionStage, 1288768896 (25216)
        Main.M36.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288769984 (2048)
        Main.M36.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288768960 (1024)
        Main.M36.bBrakeRelease, BOOL, 1288777944 (8)
        Main.M36.bHardwareEnable, BOOL, 1288777952 (8)
        Main.M36.bHome, BOOL, 1288777936 (8)
        Main.M36.bLimitBackwardEnable, BOOL, 1288777928 (8)
        Main.M36.bLimitForwardEnable, BOOL, 1288777920 (8)
        Main.M36.nRawEncoderINT, INT, 1288778064 (16)
        Main.M36.nRawEncoderUINT, UINT, 1288778048 (16)
        Main.M36.nRawEncoderULINT, ULINT, 1288777984 (64)
        Main.M37, ST_MotionStage, 1288794112 (25216)
        Main.M37.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288795200 (2048)
        Main.M37.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288794176 (1024)
        Main.M37.bBrakeRelease, BOOL, 1288803160 (8)
        Main.M37.bHardwareEnable, BOOL, 1288803168 (8)
        Main.M37.bHome, BOOL, 1288803152 (8)
        Main.M37.bLimitBackwardEnable, BOOL, 1288803144 (8)
        Main.M37.bLimitForwardEnable, BOOL, 1288803136 (8)
        Main.M37.nRawEncoderINT, INT, 1288803280 (16)
        Main.M37.nRawEncoderUINT, UINT, 1288803264 (16)
        Main.M37.nRawEncoderULINT, ULINT, 1288803200 (64)
        Main.M38, ST_MotionStage, 1288819328 (25216)
        Main.M38.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288820416 (2048)
        Main.M38.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288819392 (1024)
        Main.M38.bBrakeRelease, BOOL, 1288828376 (8)
        Main.M38.bHardwareEnable, BOOL, 1288828384 (8)
        Main.M38.bHome, BOOL, 1288828368 (8)
        Main.M38.bLimitBackwardEnable, BOOL, 1288828360 (8)
        Main.M38.bLimitForwardEnable, BOOL, 1288828352 (8)
        Main.M38.nRawEncoderINT, INT, 1288828496 (16)
        Main.M38.nRawEncoderUINT, UINT, 1288828480 (16)
        Main.M38.nRawEncoderULINT, ULINT, 1288828416 (64)
        Main.M39, ST_MotionStage, 1288844544 (25216)
        Main.M39.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288845632 (2048)
        Main.M39.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288844608 (1024)
        Main.M39.bBrakeRelease, BOOL, 1288853592 (8)
        Main.M39.bHardwareEnable, BOOL, 1288853600 (8)
        Main.M39.bHome, BOOL, 1288853584 (8)
        Main.M39.bLimitBackwardEnable, BOOL, 1288853576 (8)
        Main.M39.bLimitForwardEnable, BOOL, 1288853568 (8)
        Main.M39.nRawEncoderINT, INT, 1288853712 (16)
        Main.M39.nRawEncoderUINT, UINT, 1288853696 (16)
        Main.M39.nRawEncoderULINT, ULINT, 1288853632 (64)
        Main.M4, ST_MotionStage, 1287961984 (25216)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287963072 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287962048 (1024)
        Main.M4.bBrakeRelease, BOOL, 1287971032 (8)
        Main.M4.bHardwareEnable, BOOL, 1287971040 (8)
        Main.M4.bHome, BOOL, 1287971024 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 1287971016 (8)
        Main.M4.bLimitForwardEnable, BOOL, 1287971008 (8)
        Main.M4.nRawEncoderINT, INT, 1287971152 (16)
        Main.M4.nRawEncoderUINT, UINT, 1287971136 (16)
        Main.M4.nRawEncoderULINT, ULINT, 1287971072 (64)
        Main.M40, ST_MotionStage, 1288869760 (25216)
        Main.M40.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288870848 (2048)
        Main.M40.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288869824 (1024)
        Main.M40.bBrakeRelease, BOOL, 1288878808 (8)
        Main.M40.bHardwareEnable, BOOL, 1288878816 (8)
        Main.M40.bHome, BOOL, 1288878800 (8)
        Main.M40.bLimitBackwardEnable, BOOL, 1288878792 (8)
        Main.M40.bLimitForwardEnable, BOOL, 1288878784 (8)
        Main.M40.nRawEncoderINT, INT, 1288878928 (16)
        Main.M40.nRawEncoderUINT, UINT, 1288878912 (16)
        Main.M40.nRawEncoderULINT, ULINT, 1288878848 (64)
        Main.M41, ST_MotionStage, 1288894976 (25216)
        Main.M41.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288896064 (2048)
        Main.M41.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288895040 (1024)
        Main.M41.bBrakeRelease, BOOL, 1288904024 (8)
        Main.M41.bHardwareEnable, BOOL, 1288904032 (8)
        Main.M41.bHome, BOOL, 1288904016 (8)
        Main.M41.bLimitBackwardEnable, BOOL, 1288904008 (8)
        Main.M41.bLimitForwardEnable, BOOL, 1288904000 (8)
        Main.M41.nRawEncoderINT, INT, 1288904144 (16)
        Main.M41.nRawEncoderUINT, UINT, 1288904128 (16)
        Main.M41.nRawEncoderULINT, ULINT, 1288904064 (64)
        Main.M42, ST_MotionStage, 1288920192 (25216)
        Main.M42.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288921280 (2048)
        Main.M42.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288920256 (1024)
        Main.M42.bBrakeRelease, BOOL, 1288929240 (8)
        Main.M42.bHardwareEnable, BOOL, 1288929248 (8)
        Main.M42.bHome, BOOL, 1288929232 (8)
        Main.M42.bLimitBackwardEnable, BOOL, 1288929224 (8)
        Main.M42.bLimitForwardEnable, BOOL, 1288929216 (8)
        Main.M42.nRawEncoderINT, INT, 1288929360 (16)
        Main.M42.nRawEncoderUINT, UINT, 1288929344 (16)
        Main.M42.nRawEncoderULINT, ULINT, 1288929280 (64)
        Main.M43, ST_MotionStage, 1288945408 (25216)
        Main.M43.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288946496 (2048)
        Main.M43.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288945472 (1024)
        Main.M43.bBrakeRelease, BOOL, 1288954456 (8)
        Main.M43.bHardwareEnable, BOOL, 1288954464 (8)
        Main.M43.bHome, BOOL, 1288954448 (8)
        Main.M43.bLimitBackwardEnable, BOOL, 1288954440 (8)
        Main.M43.bLimitForwardEnable, BOOL, 1288954432 (8)
        Main.M43.nRawEncoderINT, INT, 1288954576 (16)
        Main.M43.nRawEncoderUINT, UINT, 1288954560 (16)
        Main.M43.nRawEncoderULINT, ULINT, 1288954496 (64)
        Main.M44, ST_MotionStage, 1288970624 (25216)
        Main.M44.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288971712 (2048)
        Main.M44.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288970688 (1024)
        Main.M44.bBrakeRelease, BOOL, 1288979672 (8)
        Main.M44.bHardwareEnable, BOOL, 1288979680 (8)
        Main.M44.bHome, BOOL, 1288979664 (8)
        Main.M44.bLimitBackwardEnable, BOOL, 1288979656 (8)
        Main.M44.bLimitForwardEnable, BOOL, 1288979648 (8)
        Main.M44.nRawEncoderINT, INT, 1288979792 (16)
        Main.M44.nRawEncoderUINT, UINT, 1288979776 (16)
        Main.M44.nRawEncoderULINT, ULINT, 1288979712 (64)
        Main.M45, ST_MotionStage, 1288995840 (25216)
        Main.M45.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288996928 (2048)
        Main.M45.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288995904 (1024)
        Main.M45.bBrakeRelease, BOOL, 1289004888 (8)
        Main.M45.bHardwareEnable, BOOL, 1289004896 (8)
        Main.M45.bHome, BOOL, 1289004880 (8)
        Main.M45.bLimitBackwardEnable, BOOL, 1289004872 (8)
        Main.M45.bLimitForwardEnable, BOOL, 1289004864 (8)
        Main.M45.nRawEncoderINT, INT, 1289005008 (16)
        Main.M45.nRawEncoderUINT, UINT, 1289004992 (16)
        Main.M45.nRawEncoderULINT, ULINT, 1289004928 (64)
        Main.M46, ST_MotionStage, 1289021056 (25216)
        Main.M46.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1289022144 (2048)
        Main.M46.Axis.PlcToNc, PLCTONC_AXIS_REF, 1289021120 (1024)
        Main.M46.bBrakeRelease, BOOL, 1289030104 (8)
        Main.M46.bHardwareEnable, BOOL, 1289030112 (8)
        Main.M46.bHome, BOOL, 1289030096 (8)
        Main.M46.bLimitBackwardEnable, BOOL, 1289030088 (8)
        Main.M46.bLimitForwardEnable, BOOL, 1289030080 (8)
        Main.M46.nRawEncoderINT, INT, 1289030224 (16)
        Main.M46.nRawEncoderUINT, UINT, 1289030208 (16)
        Main.M46.nRawEncoderULINT, ULINT, 1289030144 (64)
        Main.M47, ST_MotionStage, 1289046272 (25216)
        Main.M47.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1289047360 (2048)
        Main.M47.Axis.PlcToNc, PLCTONC_AXIS_REF, 1289046336 (1024)
        Main.M47.bBrakeRelease, BOOL, 1289055320 (8)
        Main.M47.bHardwareEnable, BOOL, 1289055328 (8)
        Main.M47.bHome, BOOL, 1289055312 (8)
        Main.M47.bLimitBackwardEnable, BOOL, 1289055304 (8)
        Main.M47.bLimitForwardEnable, BOOL, 1289055296 (8)
        Main.M47.nRawEncoderINT, INT, 1289055440 (16)
        Main.M47.nRawEncoderUINT, UINT, 1289055424 (16)
        Main.M47.nRawEncoderULINT, ULINT, 1289055360 (64)
        Main.M48, ST_MotionStage, 1289071488 (25216)
        Main.M48.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1289072576 (2048)
        Main.M48.Axis.PlcToNc, PLCTONC_AXIS_REF, 1289071552 (1024)
        Main.M48.bBrakeRelease, BOOL, 1289080536 (8)
        Main.M48.bHardwareEnable, BOOL, 1289080544 (8)
        Main.M48.bHome, BOOL, 1289080528 (8)
        Main.M48.bLimitBackwardEnable, BOOL, 1289080520 (8)
        Main.M48.bLimitForwardEnable, BOOL, 1289080512 (8)
        Main.M48.nRawEncoderINT, INT, 1289080656 (16)
        Main.M48.nRawEncoderUINT, UINT, 1289080640 (16)
        Main.M48.nRawEncoderULINT, ULINT, 1289080576 (64)
        Main.M49, ST_MotionStage, 1289096704 (25216)
        Main.M49.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1289097792 (2048)
        Main.M49.Axis.PlcToNc, PLCTONC_AXIS_REF, 1289096768 (1024)
        Main.M49.bBrakeRelease, BOOL, 1289105752 (8)
        Main.M49.bHardwareEnable, BOOL, 1289105760 (8)
        Main.M49.bHome, BOOL, 1289105744 (8)
        Main.M49.bLimitBackwardEnable, BOOL, 1289105736 (8)
        Main.M49.bLimitForwardEnable, BOOL, 1289105728 (8)
        Main.M49.nRawEncoderINT, INT, 1289105872 (16)
        Main.M49.nRawEncoderUINT, UINT, 1289105856 (16)
        Main.M49.nRawEncoderULINT, ULINT, 1289105792 (64)
        Main.M5, ST_MotionStage, 1287987200 (25216)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1287988288 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 1287987264 (1024)
        Main.M5.bBrakeRelease, BOOL, 1287996248 (8)
        Main.M5.bHardwareEnable, BOOL, 1287996256 (8)
        Main.M5.bHome, BOOL, 1287996240 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 1287996232 (8)
        Main.M5.bLimitForwardEnable, BOOL, 1287996224 (8)
        Main.M5.nRawEncoderINT, INT, 1287996368 (16)
        Main.M5.nRawEncoderUINT, UINT, 1287996352 (16)
        Main.M5.nRawEncoderULINT, ULINT, 1287996288 (64)
        Main.M6, ST_MotionStage, 1288012416 (25216)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288013504 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288012480 (1024)
        Main.M6.bBrakeRelease, BOOL, 1288021464 (8)
        Main.M6.bHardwareEnable, BOOL, 1288021472 (8)
        Main.M6.bHome, BOOL, 1288021456 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 1288021448 (8)
        Main.M6.bLimitForwardEnable, BOOL, 1288021440 (8)
        Main.M6.nRawEncoderINT, INT, 1288021584 (16)
        Main.M6.nRawEncoderUINT, UINT, 1288021568 (16)
        Main.M6.nRawEncoderULINT, ULINT, 1288021504 (64)
        Main.M7, ST_MotionStage, 1288037632 (25216)
        Main.M7.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288038720 (2048)
        Main.M7.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288037696 (1024)
        Main.M7.bBrakeRelease, BOOL, 1288046680 (8)
        Main.M7.bHardwareEnable, BOOL, 1288046688 (8)
        Main.M7.bHome, BOOL, 1288046672 (8)
        Main.M7.bLimitBackwardEnable, BOOL, 1288046664 (8)
        Main.M7.bLimitForwardEnable, BOOL, 1288046656 (8)
        Main.M7.nRawEncoderINT, INT, 1288046800 (16)
        Main.M7.nRawEncoderUINT, UINT, 1288046784 (16)
        Main.M7.nRawEncoderULINT, ULINT, 1288046720 (64)
        Main.M8, ST_MotionStage, 1288062848 (25216)
        Main.M8.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288063936 (2048)
        Main.M8.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288062912 (1024)
        Main.M8.bBrakeRelease, BOOL, 1288071896 (8)
        Main.M8.bHardwareEnable, BOOL, 1288071904 (8)
        Main.M8.bHome, BOOL, 1288071888 (8)
        Main.M8.bLimitBackwardEnable, BOOL, 1288071880 (8)
        Main.M8.bLimitForwardEnable, BOOL, 1288071872 (8)
        Main.M8.nRawEncoderINT, INT, 1288072016 (16)
        Main.M8.nRawEncoderUINT, UINT, 1288072000 (16)
        Main.M8.nRawEncoderULINT, ULINT, 1288071936 (64)
        Main.M9, ST_MotionStage, 1288088064 (25216)
        Main.M9.Axis.NcToPlc, NCTOPLC_AXIS_REF, 1288089152 (2048)
        Main.M9.Axis.PlcToNc, PLCTONC_AXIS_REF, 1288088128 (1024)
        Main.M9.bBrakeRelease, BOOL, 1288097112 (8)
        Main.M9.bHardwareEnable, BOOL, 1288097120 (8)
        Main.M9.bHome, BOOL, 1288097104 (8)
        Main.M9.bLimitBackwardEnable, BOOL, 1288097096 (8)
        Main.M9.bLimitForwardEnable, BOOL, 1288097088 (8)
        Main.M9.nRawEncoderINT, INT, 1288097232 (16)
        Main.M9.nRawEncoderUINT, UINT, 1288097216 (16)
        Main.M9.nRawEncoderULINT, ULINT, 1288097152 (64)

.. raw:: html

   </details>
   <br />


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.fbPmpsFileReader, FB_JsonFileToJsonDoc, 634575232 (928128)
        MOTION_GVL.fbStandardPMPSDB, FB_Standard_PMPSDB, 635503360 (27744)
        MOTION_GVL.nMaxStateMotorCount, UINT, 626222032 (16)
        MOTION_GVL.nMaxStates, UINT, 634575200 (16)


MotionConstants
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MotionConstants.MAX_STATE_MOTORS, UINT, 634575216 (16)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4388192 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 635535904 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 635539520 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 635537760 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 635536000 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 635539552 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 635535680 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 635535808 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 635534624 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 635541664 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 635540640 (1024)
        PMPS_GVL.g_cBoundaries, INT, 635540576 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 635539536 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 635535712 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 635535920 (16)
        PMPS_GVL.PERange, PE_Ranges, 635535648 (32)
        PMPS_GVL.reVHyst, REAL, 635540608 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 635535936 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 635532864 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 635531104 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 635535872 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 635535744 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 635542688 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 635540592 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 635542720 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 635542752 (256)


PRG_2_PMPS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 1265797760 (138368)
        PRG_2_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 1265798560 (1760)
        PRG_2_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 1265800320 (1760)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_state, BIT, 1265802081 (1)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 1265802080 (1)


PRG_2Theta
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2Theta.bInit, BOOL, 1275648376 (8)
        PRG_2Theta.bMoveOk, BOOL, 1280411680 (8)
        PRG_2Theta.fb2ThetaStepper, FB_MotionStage, 1280412480 (297920)
        PRG_2Theta.fb2ThetaStepper.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1280414976 (2048)
        PRG_2Theta.fb2ThetaStepper.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1280413952 (1024)
        PRG_2Theta.fbPower_AxisM2, MC_Power, 1280411712 (768)
        PRG_2Theta.fThresholdPS1, REAL, 1280710400 (32)
        PRG_2Theta.fThresholdPS2, REAL, 1280710432 (32)
        PRG_2Theta.fThresholdPS3, REAL, 1280710464 (32)


PRG_3_LOG
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_3_LOG.fbLogHandler, FB_LogHandler, 1265939840 (5788736)


PRG_Cryo
^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Cryo.bInit, BOOL, 1275648368 (8)
        PRG_Cryo.fb_Cryo_ROT, FB_MotionStage, 1279219328 (297920)
        PRG_Cryo.fb_Cryo_ROT.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1279221824 (2048)
        PRG_Cryo.fb_Cryo_ROT.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1279220800 (1024)
        PRG_Cryo.fb_Cryo_X, FB_MotionStage, 1279517248 (297920)
        PRG_Cryo.fb_Cryo_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1279519744 (2048)
        PRG_Cryo.fb_Cryo_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1279518720 (1024)
        PRG_Cryo.fb_Cryo_Y, FB_MotionStage, 1279815168 (297920)
        PRG_Cryo.fb_Cryo_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1279817664 (2048)
        PRG_Cryo.fb_Cryo_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1279816640 (1024)
        PRG_Cryo.fb_Cryo_Z, FB_MotionStage, 1280113088 (297920)
        PRG_Cryo.fb_Cryo_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1280115584 (2048)
        PRG_Cryo.fb_Cryo_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1280114560 (1024)

.. raw:: html

   </details>
   <br />


PRG_DET_ARM
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_ARM.bExecuteCouple, BOOL, 1280411696 (8)
        PRG_DET_ARM.bExecuteDecouple, BOOL, 1280411704 (8)
        PRG_DET_ARM.bInit, BOOL, 1280411688 (8)
        PRG_DET_ARM.fbAutoCoupling, FB_GantryAutoCoupling, 1281604288 (9472)
        PRG_DET_ARM.fbAutoCoupling.gantry_diff_limit.PEnc.Count, ULINT, 1281604736 (64)
        PRG_DET_ARM.fbAutoCoupling.gantry_diff_limit.SEnc.Count, ULINT, 1281604864 (64)
        PRG_DET_ARM.fbMotionYF1, FB_MotionStage, 1280710528 (297920)
        PRG_DET_ARM.fbMotionYF1.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1280713024 (2048)
        PRG_DET_ARM.fbMotionYF1.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1280712000 (1024)
        PRG_DET_ARM.fbMotionYF2, FB_MotionStage, 1281008448 (297920)
        PRG_DET_ARM.fbMotionYF2.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281010944 (2048)
        PRG_DET_ARM.fbMotionYF2.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281009920 (1024)
        PRG_DET_ARM.fbMotionZF, FB_MotionStage, 1281306368 (297920)
        PRG_DET_ARM.fbMotionZF.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281308864 (2048)
        PRG_DET_ARM.fbMotionZF.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281307840 (1024)
        PRG_DET_ARM.stRenishawAbsEncMaster, ST_RenishawAbsEnc, 1281613760 (128)
        PRG_DET_ARM.stRenishawAbsEncMaster.Count, ULINT, 1281613760 (64)
        PRG_DET_ARM.stRenishawAbsEncSlave, ST_RenishawAbsEnc, 1281613888 (128)
        PRG_DET_ARM.stRenishawAbsEncSlave.Count, ULINT, 1281613888 (64)

.. raw:: html

   </details>
   <br />


PRG_DET_CHAMBER
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_CHAMBER.bInit, BOOL, 1280710496 (8)
        PRG_DET_CHAMBER.fbMotionRyDC, FB_MotionStage, 1281911936 (297920)
        PRG_DET_CHAMBER.fbMotionRyDC.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281914432 (2048)
        PRG_DET_CHAMBER.fbMotionRyDC.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281913408 (1024)
        PRG_DET_CHAMBER.fbMotionXDC, FB_MotionStage, 1281614016 (297920)
        PRG_DET_CHAMBER.fbMotionXDC.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1281616512 (2048)
        PRG_DET_CHAMBER.fbMotionXDC.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1281615488 (1024)
        PRG_DET_CHAMBER.fbMotionZDC, FB_MotionStage, 1282209856 (297920)
        PRG_DET_CHAMBER.fbMotionZDC.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1282212352 (2048)
        PRG_DET_CHAMBER.fbMotionZDC.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1282211328 (1024)


PRG_DET_FRAME
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>44 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_FRAME.bBusy, BOOL, 1283852304 (8)
        PRG_DET_FRAME.bDone_M15, BOOL, 1283852416 (8)
        PRG_DET_FRAME.bDone_M16, BOOL, 1283852424 (8)
        PRG_DET_FRAME.bDone_M17, BOOL, 1283852432 (8)
        PRG_DET_FRAME.bEnableAdjustingHeight, BOOL, 1283852408 (8)
        PRG_DET_FRAME.bEnableAdjustingPitch, BOOL, 1283852400 (8)
        PRG_DET_FRAME.bEnableAdjustingRoll, BOOL, 1283852392 (8)
        PRG_DET_FRAME.bEnableJackOff, BOOL, 1283852368 (8)
        PRG_DET_FRAME.bEnableLanding, BOOL, 1283852384 (8)
        PRG_DET_FRAME.bEnableLevitation, BOOL, 1283852376 (8)
        PRG_DET_FRAME.bEnableMotion, BOOL, 1283852320 (8)
        PRG_DET_FRAME.bEnableMotion_M15, BOOL, 1283852328 (8)
        PRG_DET_FRAME.bEnableMotion_M16, BOOL, 1283852336 (8)
        PRG_DET_FRAME.bEnableMotion_M17, BOOL, 1283852344 (8)
        PRG_DET_FRAME.bEnableMoveRelative, BOOL, 1283852360 (8)
        PRG_DET_FRAME.bEnableSetGaugeValue, BOOL, 1283852352 (8)
        PRG_DET_FRAME.bError, BOOL, 1283852296 (8)
        PRG_DET_FRAME.bInit, BOOL, 1283852288 (8)
        PRG_DET_FRAME.bResetError, BOOL, 1283852312 (8)
        PRG_DET_FRAME.fbMoveRelative_M15, MC_MoveRelative, 1283862080 (8768)
        PRG_DET_FRAME.fbMoveRelative_M16, MC_MoveRelative, 1283870848 (8768)
        PRG_DET_FRAME.fbMoveRelative_M17, MC_MoveRelative, 1283879616 (8768)
        PRG_DET_FRAME.fbPower_AxisM15, MC_Power, 1283853632 (768)
        PRG_DET_FRAME.fbPower_AxisM16, MC_Power, 1283854400 (768)
        PRG_DET_FRAME.fbPower_AxisM17, MC_Power, 1283855168 (768)
        PRG_DET_FRAME.fbSetPosition_M15, MC_SetPosition, 1283855936 (1984)
        PRG_DET_FRAME.fbSetPosition_M16, MC_SetPosition, 1283857920 (1984)
        PRG_DET_FRAME.fbSetPosition_M17, MC_SetPosition, 1283859904 (1984)
        PRG_DET_FRAME.fDistanceX, LREAL, 1283853504 (64)
        PRG_DET_FRAME.fDistanceZ, LREAL, 1283853568 (64)
        PRG_DET_FRAME.fTargetPos_M15, LREAL, 1283861888 (64)
        PRG_DET_FRAME.fTargetPos_M16, LREAL, 1283861952 (64)
        PRG_DET_FRAME.fTargetPos_M17, LREAL, 1283862016 (64)
        PRG_DET_FRAME.iStepAdjustingHeight, INT, 1283853424 (16)
        PRG_DET_FRAME.iStepAdjustingPitch, INT, 1283853408 (16)
        PRG_DET_FRAME.iStepAdjustingRoll, INT, 1283853360 (16)
        PRG_DET_FRAME.iStepJackOff, INT, 1283853344 (16)
        PRG_DET_FRAME.iStepMoveRelative, INT, 1283853392 (16)
        PRG_DET_FRAME.iStepSetGaugeValue, INT, 1283853376 (16)
        PRG_DET_FRAME.tonDelayTrig, TON, 1283853120 (224)
        PRG_DET_FRAME.tonSV1Close, TON, 1283852896 (224)
        PRG_DET_FRAME.tonSV2Open, TON, 1283852672 (224)
        PRG_DET_FRAME.tonWaitToStabilize, TON, 1283852448 (224)
        PRG_DET_FRAME.trigDone, F_TRIG, 1283853440 (64)

.. raw:: html

   </details>
   <br />


PRG_DET_SLIT
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DET_SLIT.bExecuteMotion, BOOL, 1280710504 (8)
        PRG_DET_SLIT.bInit, BOOL, 1280710520 (8)
        PRG_DET_SLIT.bMoveOk, BOOL, 1280710512 (8)
        PRG_DET_SLIT.fbSlits_Det, FB_Slits, 1282508288 (1344000)
        PRG_DET_SLIT.fbSlits_Det.AptArrayReq, ST_PMPS_Aperture_IO, 1283851392 (96)
        PRG_DET_SLIT.fbSlits_Det.AptArrayStatus, ST_PMPS_Aperture_IO, 1283851296 (96)
        PRG_DET_SLIT.fbSlits_Det.fbBottomBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1282809792 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbBottomBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1282808768 (1024)
        PRG_DET_SLIT.fbSlits_Det.fbLeftBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1283107712 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbLeftBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1283106688 (1024)
        PRG_DET_SLIT.fbSlits_Det.fbRightBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1283405632 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbRightBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1283404608 (1024)
        PRG_DET_SLIT.fbSlits_Det.fbTopBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1282511872 (2048)
        PRG_DET_SLIT.fbSlits_Det.fbTopBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1282510848 (1024)

.. raw:: html

   </details>
   <br />


PRG_Diffractometer
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>53 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Diffractometer.bExecuteCouple, BOOL, 1265939824 (8)
        PRG_Diffractometer.bExecuteDecouple, BOOL, 1265939832 (8)
        PRG_Diffractometer.bInit, BOOL, 1265939816 (8)
        PRG_Diffractometer.couple, MC_GearIn, 1274445632 (6656)
        PRG_Diffractometer.decouple, MC_GearOut, 1274452288 (1792)
        PRG_Diffractometer.EPS_Diff_2Theta, FB_EPS, 1274432704 (64)
        PRG_Diffractometer.EPS_Diff_2ThetaY, FB_EPS, 1274434112 (64)
        PRG_Diffractometer.EPS_Diff_Chi, FB_EPS, 1274428480 (64)
        PRG_Diffractometer.EPS_Diff_Phi, FB_EPS, 1274429888 (64)
        PRG_Diffractometer.EPS_Diff_Theta, FB_EPS, 1274431296 (64)
        PRG_Diffractometer.EPS_Diff_Z, FB_EPS, 1274427072 (64)
        PRG_Diffractometer.fb2ThetaAutoCoupling, FB_GantryAutoCoupling, 1274436160 (9472)
        PRG_Diffractometer.fb2ThetaAutoCoupling.gantry_diff_limit.PEnc.Count, ULINT, 1274436608 (64)
        PRG_Diffractometer.fb2ThetaAutoCoupling.gantry_diff_limit.SEnc.Count, ULINT, 1274436736 (64)
        PRG_Diffractometer.fb_Diff_2Theta, FB_MotionStage, 1272340288 (297920)
        PRG_Diffractometer.fb_Diff_2Theta.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272342784 (2048)
        PRG_Diffractometer.fb_Diff_2Theta.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272341760 (1024)
        PRG_Diffractometer.fb_Diff_2Theta_Encoder, FB_MotionStage, 1274454336 (297920)
        PRG_Diffractometer.fb_Diff_2Theta_Encoder.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1274456832 (2048)
        PRG_Diffractometer.fb_Diff_2Theta_Encoder.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1274455808 (1024)
        PRG_Diffractometer.fb_Diff_2ThetaY, FB_MotionStage, 1272638208 (297920)
        PRG_Diffractometer.fb_Diff_2ThetaY.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272640704 (2048)
        PRG_Diffractometer.fb_Diff_2ThetaY.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272639680 (1024)
        PRG_Diffractometer.fb_Diff_Chi, FB_MotionStage, 1272936128 (297920)
        PRG_Diffractometer.fb_Diff_Chi.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272938624 (2048)
        PRG_Diffractometer.fb_Diff_Chi.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272937600 (1024)
        PRG_Diffractometer.fb_Diff_Phi, FB_MotionStage, 1273234048 (297920)
        PRG_Diffractometer.fb_Diff_Phi.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1273236544 (2048)
        PRG_Diffractometer.fb_Diff_Phi.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1273235520 (1024)
        PRG_Diffractometer.fb_Diff_Theta, FB_MotionStage, 1272042368 (297920)
        PRG_Diffractometer.fb_Diff_Theta.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1272044864 (2048)
        PRG_Diffractometer.fb_Diff_Theta.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1272043840 (1024)
        PRG_Diffractometer.fb_Diff_X, FB_MotionStage, 1273531968 (297920)
        PRG_Diffractometer.fb_Diff_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1273534464 (2048)
        PRG_Diffractometer.fb_Diff_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1273533440 (1024)
        PRG_Diffractometer.fb_Diff_Y, FB_MotionStage, 1273829888 (297920)
        PRG_Diffractometer.fb_Diff_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1273832384 (2048)
        PRG_Diffractometer.fb_Diff_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1273831360 (1024)
        PRG_Diffractometer.fb_Diff_Z, FB_MotionStage, 1274127808 (297920)
        PRG_Diffractometer.fb_Diff_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1274130304 (2048)
        PRG_Diffractometer.fb_Diff_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1274129280 (1024)
        PRG_Diffractometer.fbSetPosition, MC_SetPosition, 1274434176 (1984)
        PRG_Diffractometer.GantryDiff, REAL, 1271737056 (32)
        PRG_Diffractometer.n2Theta, ULINT, 1274454080 (64)
        PRG_Diffractometer.r2Theta, LREAL, 1274454144 (64)
        PRG_Diffractometer.rtemp, LREAL, 1274454272 (64)
        PRG_Diffractometer.stEPS_Diff_2Theta, DUT_EPS, 1274431360 (1344)
        PRG_Diffractometer.stEPS_Diff_2ThetaY, DUT_EPS, 1274432768 (1344)
        PRG_Diffractometer.stEPS_Diff_Chi, DUT_EPS, 1274427136 (1344)
        PRG_Diffractometer.stEPS_Diff_Phi, DUT_EPS, 1274428544 (1344)
        PRG_Diffractometer.stEPS_Diff_Theta, DUT_EPS, 1274429952 (1344)
        PRG_Diffractometer.stEPS_Diff_Z, DUT_EPS, 1274425728 (1344)
        PRG_Diffractometer.temp, ULINT, 1274454208 (64)

.. raw:: html

   </details>
   <br />


PRG_LAS
^^^^^^^

.. raw:: html

   <details>
       <summary>51 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_LAS.astLAS_VIS_PositionState, ST_PositionState, 1276490560 (54720)
        PRG_LAS.bInit, BOOL, 1272042336 (8)
        PRG_LAS.eLAS_VIS_StateGet, ENUM_LAS_VIS_States, 1275648320 (16)
        PRG_LAS.eLAS_VIS_StateSet, ENUM_LAS_VIS_States, 1272042352 (16)
        PRG_LAS.fb_LAS_D_H, FB_MotionStage, 1275052480 (297920)
        PRG_LAS.fb_LAS_D_H.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1275054976 (2048)
        PRG_LAS.fb_LAS_D_H.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1275053952 (1024)
        PRG_LAS.fb_LAS_D_V, FB_MotionStage, 1275350400 (297920)
        PRG_LAS.fb_LAS_D_V.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1275352896 (2048)
        PRG_LAS.fb_LAS_D_V.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1275351872 (1024)
        PRG_LAS.fb_LAS_VIS, FB_MotionStage, 1274754560 (297920)
        PRG_LAS.fb_LAS_VIS.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1274757056 (2048)
        PRG_LAS.fb_LAS_VIS.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1274756032 (1024)
        PRG_LAS.fbLAS_D_H_EPS, FB_EPS, 1277130752 (64)
        PRG_LAS.fbLAS_VIS_EPS, FB_EPS, 1277129344 (64)
        PRG_LAS.fbLAS_VIS_HardwareFFOutput, FB_HardwareFFOutput, 1276633088 (494912)
        PRG_LAS.fbLAS_VIS_HardwareFFOutput.q_xFastFaultOut, BOOL, 1276633352 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D, FB_PositionState1D, 1275648384 (842176)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].Axis.NcToPlc, NCTOPLC_AXIS_REF, 1276251840 (2048)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].Axis.PlcToNc, PLCTONC_AXIS_REF, 1276250816 (1024)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].bBrakeRelease, BOOL, 1276259800 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].bHardwareEnable, BOOL, 1276259808 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].bHome, BOOL, 1276259792 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].bLimitBackwardEnable, BOOL, 1276259784 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].bLimitForwardEnable, BOOL, 1276259776 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].nRawEncoderINT, INT, 1276259920 (16)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].nRawEncoderUINT, UINT, 1276259904 (16)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[1].nRawEncoderULINT, ULINT, 1276259840 (64)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].Axis.NcToPlc, NCTOPLC_AXIS_REF, 1276277056 (2048)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].Axis.PlcToNc, PLCTONC_AXIS_REF, 1276276032 (1024)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].bBrakeRelease, BOOL, 1276285016 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].bHardwareEnable, BOOL, 1276285024 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].bHome, BOOL, 1276285008 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].bLimitBackwardEnable, BOOL, 1276285000 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].bLimitForwardEnable, BOOL, 1276284992 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].nRawEncoderINT, INT, 1276285136 (16)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].nRawEncoderUINT, UINT, 1276285120 (16)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[2].nRawEncoderULINT, ULINT, 1276285056 (64)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].Axis.NcToPlc, NCTOPLC_AXIS_REF, 1276302272 (2048)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].Axis.PlcToNc, PLCTONC_AXIS_REF, 1276301248 (1024)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].bBrakeRelease, BOOL, 1276310232 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].bHardwareEnable, BOOL, 1276310240 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].bHome, BOOL, 1276310224 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].bLimitBackwardEnable, BOOL, 1276310216 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].bLimitForwardEnable, BOOL, 1276310208 (8)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].nRawEncoderINT, INT, 1276310352 (16)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].nRawEncoderUINT, UINT, 1276310336 (16)
        PRG_LAS.fbLAS_VIS_PositionState1D.astMotionStageMax[3].nRawEncoderULINT, ULINT, 1276310272 (64)
        PRG_LAS.fbLAS_VIS_StateSetupHelper, FB_StateSetupHelper, 1276545280 (87808)
        PRG_LAS.stLAS_D_H, DUT_EPS, 1277129408 (1344)
        PRG_LAS.stLAS_VIS, DUT_EPS, 1277128000 (1344)

.. raw:: html

   </details>
   <br />


PRG_OPT
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT.bInit, BOOL, 1286266472 (8)
        PRG_OPT.fbMotionRxG, FB_MotionStage, 1286992576 (297920)
        PRG_OPT.fbMotionRxG.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1286995072 (2048)
        PRG_OPT.fbMotionRxG.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1286994048 (1024)
        PRG_OPT.fbMotionRzPM, FB_MotionStage, 1287588416 (297920)
        PRG_OPT.fbMotionRzPM.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1287590912 (2048)
        PRG_OPT.fbMotionRzPM.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1287589888 (1024)
        PRG_OPT.fbMotionXG, FB_MotionStage, 1287290496 (297920)
        PRG_OPT.fbMotionXG.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1287292992 (2048)
        PRG_OPT.fbMotionXG.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1287291968 (1024)


PRG_OPT_SLITS
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT_SLITS.bExecuteMotion, BOOL, 1283852440 (8)
        PRG_OPT_SLITS.bInit, BOOL, 1285232392 (8)
        PRG_OPT_SLITS.bMoveOk, BOOL, 1285232384 (8)
        PRG_OPT_SLITS.fbSlits_Opt, FB_Slits, 1283888384 (1344000)
        PRG_OPT_SLITS.fbSlits_Opt.AptArrayReq, ST_PMPS_Aperture_IO, 1285231488 (96)
        PRG_OPT_SLITS.fbSlits_Opt.AptArrayStatus, ST_PMPS_Aperture_IO, 1285231392 (96)
        PRG_OPT_SLITS.fbSlits_Opt.fbBottomBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1284189888 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbBottomBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1284188864 (1024)
        PRG_OPT_SLITS.fbSlits_Opt.fbLeftBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1284487808 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbLeftBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1284486784 (1024)
        PRG_OPT_SLITS.fbSlits_Opt.fbRightBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1284785728 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbRightBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1284784704 (1024)
        PRG_OPT_SLITS.fbSlits_Opt.fbTopBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1283891968 (2048)
        PRG_OPT_SLITS.fbSlits_Opt.fbTopBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1283890944 (1024)

.. raw:: html

   </details>
   <br />


PRG_OPT_XPM
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT_XPM.bExecuteMotionXPM, BOOL, 1285232760 (8)
        PRG_OPT_XPM.bInit, BOOL, 1285232752 (8)
        PRG_OPT_XPM.bMoveOkXPM, BOOL, 1286266464 (8)
        PRG_OPT_XPM.fb2AxesXPM, FB_2AxesTrans, 1286266496 (726016)
        PRG_OPT_XPM.fb2AxesXPM.AptArrayReq, ST_PMPS_Aperture_IO, 1286992384 (96)
        PRG_OPT_XPM.fb2AxesXPM.AptArrayStatus, ST_PMPS_Aperture_IO, 1286992288 (96)
        PRG_OPT_XPM.fb2AxesXPM.fbFirstStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1286270016 (2048)
        PRG_OPT_XPM.fb2AxesXPM.fbFirstStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1286268992 (1024)
        PRG_OPT_XPM.fb2AxesXPM.fbSecondStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1286567936 (2048)
        PRG_OPT_XPM.fb2AxesXPM.fbSecondStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1286566912 (1024)
        PRG_OPT_XPM.rDistance, REAL, 1286992512 (32)

.. raw:: html

   </details>
   <br />


PRG_OPT_YG
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_OPT_YG.bDebug, BOOL, 1285232400 (8)
        PRG_OPT_YG.bExecuteMotion, BOOL, 1285232408 (8)
        PRG_OPT_YG.bInit, BOOL, 1285232744 (8)
        PRG_OPT_YG.bMoveOk, BOOL, 1285232736 (8)
        PRG_OPT_YG.fbYGMotion, FB_3AxesJack, 1285232768 (1033408)
        PRG_OPT_YG.fbYGMotion.AptArrayReq, ST_PMPS_Aperture_IO, 1286265280 (96)
        PRG_OPT_YG.fbYGMotion.AptArrayStatus, ST_PMPS_Aperture_IO, 1286265184 (96)
        PRG_OPT_YG.fbYGMotion.fbJack1Stage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1285236544 (2048)
        PRG_OPT_YG.fbYGMotion.fbJack1Stage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1285235520 (1024)
        PRG_OPT_YG.fbYGMotion.fbJack2Stage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1285534464 (2048)
        PRG_OPT_YG.fbYGMotion.fbJack2Stage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1285533440 (1024)
        PRG_OPT_YG.fbYGMotion.fbJack3Stage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1285832384 (2048)
        PRG_OPT_YG.fbYGMotion.fbJack3Stage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1285831360 (1024)

.. raw:: html

   </details>
   <br />


PRG_RotDet
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_RotDet.bInit, BOOL, 1275648336 (8)
        PRG_RotDet.fb_Rot_Det, FB_MotionStage, 1278918336 (297920)
        PRG_RotDet.fb_Rot_Det.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278920832 (2048)
        PRG_RotDet.fb_Rot_Det.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278919808 (1024)


PRG_SDS
^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SDS.bInit, BOOL, 1272042344 (8)
        PRG_SDS.fb_SDS_H, FB_MotionStage, 1278620416 (297920)
        PRG_SDS.fb_SDS_H.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278622912 (2048)
        PRG_SDS.fb_SDS_H.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278621888 (1024)
        PRG_SDS.fb_SDS_ROT_H, FB_MotionStage, 1278322496 (297920)
        PRG_SDS.fb_SDS_ROT_H.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278324992 (2048)
        PRG_SDS.fb_SDS_ROT_H.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278323968 (1024)
        PRG_SDS.fb_SDS_ROT_V, FB_MotionStage, 1277130816 (297920)
        PRG_SDS.fb_SDS_ROT_V.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1277133312 (2048)
        PRG_SDS.fb_SDS_ROT_V.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1277132288 (1024)
        PRG_SDS.fb_SDS_X, FB_MotionStage, 1277428736 (297920)
        PRG_SDS.fb_SDS_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1277431232 (2048)
        PRG_SDS.fb_SDS_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1277430208 (1024)
        PRG_SDS.fb_SDS_Y, FB_MotionStage, 1277726656 (297920)
        PRG_SDS.fb_SDS_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1277729152 (2048)
        PRG_SDS.fb_SDS_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1277728128 (1024)
        PRG_SDS.fb_SDS_Z, FB_MotionStage, 1278024576 (297920)
        PRG_SDS.fb_SDS_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1278027072 (2048)
        PRG_SDS.fb_SDS_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1278026048 (1024)

.. raw:: html

   </details>
   <br />


PRG_Sensor
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Sensor.bInit, BOOL, 1286266480 (8)
        PRG_Sensor.bResetSensorMode, BOOL, 1286992552 (8)
        PRG_Sensor.bSensorHeadNormalValueMode, BOOL, 1286992544 (8)
        PRG_Sensor.bSensorHeadValueMode, BOOL, 1286266488 (8)
        PRG_Sensor.uintTest, UINT, 1286992560 (16)


PRG_SpetrometerArm
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SpetrometerArm.bEnaIclk, BOOL, 1275648344 (8)
        PRG_SpetrometerArm.bEnaIclkErrAck, BOOL, 1275648352 (8)
        PRG_SpetrometerArm.bEnaIclkRestartESTOP, BOOL, 1275648360 (8)
        PRG_SpetrometerArm.fbPower_AxisM11, MC_Power, 1279216256 (768)
        PRG_SpetrometerArm.fbPower_AxisM12, MC_Power, 1279217024 (768)
        PRG_SpetrometerArm.fbPower_AxisM13, MC_Power, 1279217792 (768)
        PRG_SpetrometerArm.fbPower_AxisM14, MC_Power, 1279218560 (768)


PRG_SSL
^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SSL.bAlreadyCoupled, BOOL, 1265797736 (8)
        PRG_SSL.bExecuteCouple, BOOL, 1265797744 (8)
        PRG_SSL.bInit, BOOL, 1265939808 (8)
        PRG_SSL.bInitComplete, BOOL, 1265797752 (8)
        PRG_SSL.bLimitBackwardEnable, BOOL, 1257374504 (8)
        PRG_SSL.bLimitForwardEnable, BOOL, 1265797728 (8)
        PRG_SSL.couple, MC_GearIn, 1272035072 (6656)
        PRG_SSL.fb_SSL_Motor, FB_MotionStage, 1271737088 (297920)
        PRG_SSL.fb_SSL_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 1271739584 (2048)
        PRG_SSL.fb_SSL_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 1271738560 (1024)
        PRG_SSL.nCurrGantryDiff, LINT, 1272035008 (64)
        PRG_SSL.nGANTRY_TOLERANCE, LINT, 1272041856 (64)
        PRG_SSL.nSPCA_ENC_REF, ULINT, 1272041792 (64)
        PRG_SSL.nSSL_ENC_REF, ULINT, 1272041728 (64)

.. raw:: html

   </details>
   <br />


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 1290658368 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 1290658112 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 1290658624 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 1290658752 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 1290658496 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 1290658240 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 1290637568 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 1290601216 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 1290605376 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 1290602240 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 1290604288 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 1290605344 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 1290605312 (32)


